--- a/assets/pug/data/todo-app-data.pug
+++ b/assets/pug/data/todo-app-data.pug
@@ -19,12 +19,12 @@
         },
         {
             title:"Go Outside Picnic on Sunday",
-            subTitle:"with friends 22 jun. 2022",
+            subTitle:"with friends 22 jun. 2023",
             status:"inprogress",
             priority:"medium",
         },
         {
-            title:"Complete Assignment before deadline 5 Sept. 2022",
+            title:"Complete Assignment before deadline 5 Jan. 2023",
             subTitle:"complete geography assignments",
             checked:true,
             status:"completed",
@@ -33,6 +33,25 @@
         {
             title:"Meet old Friend to airport before he live city  to his home",
             subTitle:"long time after he meeting",
+            status:"pending",
+            priority:"low",
+        },
+        {
+            title:"Test the outgoing links from all the pages to the specific domain under test.",
+            subTitle:"22 March. 2023",
+            status:"inprogress",
+            priority:"medium",
+        },
+        {
+            title:"Wrong inputs in the forms to the fields in the forms.",
+            subTitle:"Resolved the input error",
+            checked:true,
+            status:"completed",
+            priority:"medium",
+        }, 
+        {
+            title:"Check validation",
+            subTitle:"Completed before the 25th April, 2023",
             status:"pending",
             priority:"low",
         },
