--- a/assets/pug/layout/chat-layout/chat-main-header.pug
+++ b/assets/pug/layout/chat-layout/chat-main-header.pug
@@ -5,7 +5,7 @@ div.border-b.border-gray-light.pb-4.flex.items-center.justify-between(class="dar
   div 
     div.flex.items-center.gap-3(sm:gap-1)  
       div.avatar
-        div.w-10.rounded-full(class="xl:w-9")
+        div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
           img(src='../../assets/images/avatar/2.jpg' alt='avatar')
       div
         h4.text-sm.font-semibold.text-title(class="leading-none 3sm:text-2xs 3sm:leading-none") Dmitriy Groshev 
