--- a/assets/pug/pages/template/blog-detail.pug
+++ b/assets/pug/pages/template/blog-detail.pug
@@ -89,7 +89,7 @@ html(lang='en')
                                  li(class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none")                                 
                                     a.flex.items-center.gap-3(href="blog-grid.html" class="w-[calc(100%_-_0rem)] xl:gap-2")  
                                        div.avatar  
-                                          div.w-10.rounded-full(class="xl:w-9") 
+                                          div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9") 
                                              img(src='../../assets/images/avatar/25.jpg' alt='avatar')
                                        div(class="w-[calc(100%_-_3.125rem)]")
                                           h3.text-xs.font-bold.text-primary(class="leading-none lg:text-2xs") Angela R. Lear
@@ -97,7 +97,7 @@ html(lang='en')
                                  li(class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none")                                 
                                     a.flex.items-center.gap-3(href="blog-grid.html" class="w-[calc(100%_-_0rem)] xl:gap-2")  
                                        div.avatar
-                                          div.w-10.rounded-full(class="xl:w-9")
+                                          div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
                                              img(src='../../assets/images/avatar/15.jpg' alt='avatar')
                                        div(class="w-[calc(100%_-_3.125rem)]")
                                           h3.text-xs.font-bold.text-primary(class="leading-none lg:text-2xs") Marjorie W. Martin
@@ -105,7 +105,7 @@ html(lang='en')
                                  li(class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none")                                 
                                     a.flex.items-center.gap-3(href="blog-grid.html" class="w-[calc(100%_-_0rem)] xl:gap-2")  
                                        div.avatar
-                                          div.w-10.rounded-full(class="xl:w-9")
+                                          div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
                                              img(src='../../assets/images/avatar/6.jpg' alt='avatar')
                                        div(class="w-[calc(100%_-_3.125rem)]")
                                           h3.text-xs.font-bold.text-primary(class="leading-none lg:text-2xs") Russell P. Renfrew
@@ -113,7 +113,7 @@ html(lang='en')
                                  li(class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none")                                 
                                     a.flex.items-center.gap-3(href="blog-grid.html" class="w-[calc(100%_-_0rem)] xl:gap-2")  
                                        div.avatar
-                                          div.w-10.rounded-full(class="xl:w-9")
+                                          div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
                                              img(src='../../assets/images/avatar/27.jpg' alt='avatar')
                                        div(class="w-[calc(100%_-_3.125rem)]")
                                           h3.text-xs.font-bold.text-primary(class="leading-none lg:text-2xs") Kevin A. Ek
@@ -146,7 +146,7 @@ html(lang='en')
                                  div.flex.items-center.justify-between(class=" pt-[.8125rem] sm:flex-col sm:items-start")  
                                     div.flex.items-center.gap-3(class="w-[calc(100%_-_0rem)] xl:gap-2")
                                        a.avatar(href="blog-grid.html")
-                                          div.w-10.rounded-full(class="xl:w-9")
+                                          div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
                                              img(src='../../assets/images/avatar/17.jpg' alt='avatar')
                                        div(class="w-[calc(100%_-_3.125rem)]")
                                           h3.text-xs.font-bold.text-primary(class="leading-none lg:text-2xs") Rita Sines
@@ -166,7 +166,7 @@ html(lang='en')
                                     div(class="pt-[1rem] first:pt-0 first:mt-0 first:border-none")                                 
                                        div.flex.items-start.gap-3(class="w-[calc(100%_-_0rem)] xl:gap-2")  
                                           a(href="blog-grid.html").avatar
-                                             div.w-10.rounded-full(class="xl:w-9")
+                                             div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
                                                 img(src='../../assets/images/avatar/33.jpg' alt='avatar')
                                           div(class="w-[calc(100%_-_3.125rem)]")
                                              div(class="flex items-center justify-between gap-2 sm:flex-col sm:gap-0 sm:items-start")
@@ -180,7 +180,7 @@ html(lang='en')
                                     div(class="pt-[1rem] ml-[3.125rem] sm:ml-unset first:pt-0 first:mt-0 first:border-none")                                 
                                        div.flex.items-start.gap-3(class="w-[calc(100%_-_0rem)] xl:gap-2")  
                                           a(href="blog-grid.html").avatar
-                                             div.w-10.rounded-full(class="xl:w-9")
+                                             div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
                                                 img(src='../../assets/images/avatar/26.jpg' alt='avatar')
                                           div(class="w-[calc(100%_-_3.125rem)]")
                                              div(class="flex items-center justify-between gap-2 sm:flex-col sm:gap-0 sm:items-start")
@@ -194,7 +194,7 @@ html(lang='en')
                                     div(class="pt-[1rem] first:pt-0 first:mt-0 first:border-none")                   
                                        div.flex.items-start.gap-3(class="w-[calc(100%_-_0rem)] xl:gap-2")  
                                           a(href="blog-grid.html").avatar
-                                             div.w-10.rounded-full(class="xl:w-9")
+                                             div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
                                                 img(src='../../assets/images/avatar/28.jpg' alt='avatar')
                                           div(class="w-[calc(100%_-_3.125rem)]")
                                              div(class="flex items-center justify-between gap-2 sm:flex-col sm:gap-0 sm:items-start")
