--- a/assets/pug/pages/template/checkout.pug
+++ b/assets/pug/pages/template/checkout.pug
@@ -123,64 +123,67 @@ html(lang='en')
                                  label.btn.bg-gray-light.p-1(for='modal-edit') 
                                     i(data-feather="plus" class="w-4 h-4 stroke-content3")
                               div.grid.grid-cols-12.gap-card-gap.mb-5 
-                                 div.col-span-4(class="xl:col-span-6 2md:col-span-12")
+                                 div.col-span-4(class="5xl:col-span-6 2md:col-span-12")
                                     div.border.border-border-light.p-4 
-                                       div.flex.justify-between.gap-2.items-center.mb-4 
-                                          div.flex.items-center.gap-2
-                                             div.radio-button.radio-sm.primary
-                                                input#home(type='radio' name='address')
-                                                div.check
-                                                label(for='home' class="text-xs cursor-pointer") Home 
-                                          div.flex.items-center.gap-2
-                                             label(for='modal-edit') 
-                                                +SVG_ICON("Edit-Square", "w-4 h-4 stroke-title cursor-pointer") 
-                                             label(for='modal-delete') 
-                                                +SVG_ICON("Delete", "w-4 h-4 stroke-title cursor-pointer") 
-                                       div.flex.flex-col.gap-2 
-                                          h6.text-title.font-bold Filomena Green 
-                                          p.text-content3.text-xs 
-                                             span.font-semibold Address: 
-                                             | 	2211 Fruitville Rd, Sarasota, Florida, US 34237
-                                          p.text-content3.text-xs 
-                                             span.font-semibold Contact: 
-                                             | 	(941) 321-5643
-                                 div.col-span-4(class="xl:col-span-6 2md:col-span-12")
+                                       div.radio-button.radio-sm.primary(class="items-start")
+                                          input#home(type='radio' name='address')
+                                          div.check(class="min-w-[1rem]")
+                                          label(for='home' class="w-full text-xs cursor-pointer") 
+                                             div.flex.gap-2.justify-between
+                                                span Home
+                                                div.flex.items-center.gap-2
+                                                   label(for='modal-edit') 
+                                                      +SVG_ICON("Edit-Square", "w-4 h-4 stroke-title cursor-pointer") 
+                                                   label(for='modal-delete') 
+                                                      +SVG_ICON("Delete", "w-4 h-4 stroke-title cursor-pointer") 
+                                             div.flex.flex-col.gap-2 
+                                                h6.text-title.font-bold Filomena Green 
+                                                p.text-content3.text-xs 
+                                                   span.font-semibold Address: 
+                                                   | 	2211 Fruitville Rd, Sarasota, Florida, US 34237
+                                                p.text-content3.text-xs 
+                                                   span.font-semibold Contact: 
+                                                   | 	(941) 321-5643
+                                 div.col-span-4(class="5xl:col-span-6 2md:col-span-12")
                                     div.border.border-border-light.p-4 
-                                       div.flex.justify-between.gap-2.items-center.mb-4 
-                                          div.radio-button.radio-sm.primary
-                                             input#work(type='radio' name='address')
-                                             div.check
-                                             label(for='work' class="text-xs cursor-pointer") Work
-                                          div.flex.items-center.gap-2 
-                                             label(for='modal-edit') 
-                                                +SVG_ICON("Edit-Square", "w-4 h-4 stroke-title cursor-pointer") 
-                                             label(for='modal-delete') 
-                                                +SVG_ICON("Delete", "w-4 h-4 stroke-title cursor-pointer") 
-                                       div.flex.flex-col.gap-2 
-                                          h6.text-title.font-bold 	Ms. Ila Runte DDS
-                                          p.text-content3.text-xs 
-                                             span.font-semibold Address: 
-                                             | 	1531 E 23rd St S, Independence, Mississippi, US 64055
-                                          p.text-content3.text-xs 
-                                             span.font-semibold Contact: 
-                                             | 	(816) 252-4500                                        
+                                       div.radio-button.radio-sm.primary(class="items-start")
+                                          input#work(type='radio' name='address')
+                                          div.check(class="min-w-[1rem]")
+                                          label(for='work' class="w-full text-xs cursor-pointer") 
+                                             div.flex.gap-2.justify-between
+                                                span Work
+                                                div.flex.items-center.gap-2 
+                                                   label(for='modal-edit') 
+                                                      +SVG_ICON("Edit-Square", "w-4 h-4 stroke-title cursor-pointer") 
+                                                   label(for='modal-delete') 
+                                                      +SVG_ICON("Delete", "w-4 h-4 stroke-title cursor-pointer") 
+                                             div.flex.flex-col.gap-2 
+                                                h6.text-title.font-bold 	Ms. Ila Runte DDS
+                                                p.text-content3.text-xs 
+                                                   span.font-semibold Address: 
+                                                   | 	1531 E 23rd St S, Independence, Mississippi, US 64055
+                                                p.text-content3.text-xs 
+                                                   span.font-semibold Contact: 
+                                                   | 	(816) 252-4500                                        
                               h6.text-title.font-medium.mb-5 Shipping Method 
                               div.grid.grid-cols-12.gap-card-gap.mb-5 
                                  div.col-span-6(class="2md:col-span-12")
                                     div.border.border-border-light.p-4
-                                       div.radio-button.radio-sm.primary
+                                       div.radio-button.radio-sm.primary(class="items-start")
                                           input#free(type='radio' name='payment')
-                                          div.check
-                                          label(for='free' class="text-xs cursor-pointer") Standard Delivery - Free 
-                                       p.pl-6.text-content3.text-xs Estimated 5-7 days shipping
+                                          div.check(class="min-w-[1rem]")
+                                          label(for='free' class="w-full text-xs cursor-pointer") 
+                                             span Standard Delivery - Free 
+                                             p.text-content3.text-xs Estimated 5-7 days shipping
                                  div.col-span-6(class="2md:col-span-12")
                                     div.border.border-border-light.p-4 
                                        div.flex.items-center.gap-2.mb-1
-                                          div.radio-button.radio-sm.primary
+                                          div.radio-button.radio-sm.primary(class="items-start w-full")
                                              input#standard(type='radio' name='payment')
-                                             div.check
-                                             label(for='standard' class="text-xs cursor-pointer") Express Delivery - $24 
-                                       p.pl-6.text-content3.text-xs Estimated 1-2 days shipping
+                                             div.check(class="min-w-[1rem]")
+                                             label(for='standard' class="w-full text-xs cursor-pointer") 
+                                                span Express Delivery - $24 
+                                                p.text-content3.text-xs Estimated 1-2 days shipping
                               div.flex.justify-between.items-center(class="sm:flex-col sm:gap-3")
                                  a(href="cart.html").btn.bg-secondary.text-xs.text-white.flex.items-center.gap-2(class="py-2 !w-fit sm:!w-full justify-center !m-0" type='button') 
                                     i(data-feather="arrow-left" class="w-4 h-4 stroke-white")
@@ -193,28 +196,29 @@ html(lang='en')
                               h5.text-title.font-semibold.mb-2 Payment Information 
                               p.text-content3.mb-5 Fill up the following information to send you the order
                               div.border.border-border-light.p-4.mb-5 
-                                 div.flex.gap-2.items-center.justify-between(class="2sm:flex-col 2sm:items-start")
-                                    div
-                                       div.flex.items-center.gap-2.mb-1
-                                          div.radio-button.radio-sm.primary
-                                             input#paypal(type='radio' name='payment-method')
-                                             div.check
-                                             label(for='paypal' class="text-xs cursor-pointer") PayPal
-                                       p.pl-6.text-content3.text-xs You will be taken to the PayPal website to finish your transaction safely
-                                    img(class="h-[30px]" src="../../assets/images/ecommerce/paypal.png" alt="PayPal" class="2sm:pl-6 rtl:2sm:pl-unset rtl:2sm:pr-6")
+                                 div.radio-button.radio-sm.primary(class="items-start")
+                                    input#paypal(type='radio' name='payment-method')
+                                    div.check(class="min-w-[1rem]")
+                                    label(for='paypal' class="w-full text-xs cursor-pointer")
+                                       div.flex.justify-between.gap-1(class="sm:flex-col sm:items-start")
+                                          div
+                                             span PayPal
+                                             p.text-content3.text-xs You will be taken to the PayPal website to finish your transaction safely
+                                          img(class="h-[30px]" src="../../assets/images/ecommerce/paypal.png" alt="PayPal" class="rtl:2sm:pl-unset rtl:2sm:pr-6")
                               div.border.border-border-light.p-4.mb-5 
-                                 div.flex.gap-2.items-center.justify-between.mb-5(class="2sm:flex-col 2sm:items-start")
+                                 div.radio-button.radio-sm.primary(class="items-start")
+                                    input#credit(type='radio' name='payment-method')
+                                    div.check(class="min-w-[1rem]")
+                                    label(for='credit' class="w-full text-xs cursor-pointer")
+                                       div.flex.flex-col.gap-4
+                                          div.flex.justify-between.gap-1(class="sm:flex-col sm:items-start") 
+                                             div
+                                                span Credit Card
+                                                p.text-content3.text-xs Transferring money securely through your bank account. Mastercard, Visa, Discover, and Stripe are all accepted
+                                             img(class="h-[30px]" src="../../assets/images/ecommerce/credit-card.png" alt="credit card" class="rtl:2sm:pl-unset rtl:2sm:pr-6")
+                                 form(action="index.html" class="flex flex-col gap-4 m-0 !mt-4 !ml-5 sm:!ml-0 theme-form")
                                     div
-                                       div.flex.items-center.gap-2.mb-1
-                                          div.radio-button.radio-sm.primary
-                                             input#credit(type='radio' name='payment-method')
-                                             div.check
-                                             label(for='credit' class="text-xs cursor-pointer") Credit Card
-                                       p.pl-6.text-content3.text-xs Transferring money securely through your bank account. Mastercard, Visa, Discover, and Stripe are all accepted
-                                    img(class="h-[30px]" src="../../assets/images/ecommerce/credit-card.png" alt="credit card" class="2sm:pl-6 rtl:2sm:pl-unset rtl:2sm:pr-6")
-                                 form(action="index.html" class="flex flex-col gap-4 m-0 theme-form")
-                                    div
-                                       label(for="cardholder") Card holder
+                                       label(for="cardholder") Card Holder
                                        input(type="text" id="cardholder" placeholder="Enter card holder name" required)
                                     div
                                        label(for="cardholder") Card Number
@@ -227,15 +231,15 @@ html(lang='en')
                                           label(for="cvv") CVV
                                           input(type="number" id="cvv" placeholder="Enter your last name" required)                                            
                               div.border.border-border-light.p-4.mb-5 
-                                 div.flex.gap-2.items-center.justify-between(class="2sm:flex-col 2sm:items-start")
-                                    div
-                                       div.flex.items-center.gap-2.mb-1
-                                          div.radio-button.radio-sm.primary
-                                             input#cod(type='radio' name='payment-method')
-                                             div.check
-                                             label(for='cod' class="text-xs cursor-pointer") Cash On Delivery
-                                       p.pl-6.text-content3.text-xs After your order is delivered, make a cash payment
-                                    img(class="h-[30px]" src="../../assets/images/ecommerce/cash-on-delivery.png" alt="cash on delivery" class="2sm:pl-6 rtl:2sm:pl-unset rtl:2sm:pr-6")
+                                 div.radio-button.radio-sm.primary(class="items-start")
+                                    input#cod(type='radio' name='payment-method')
+                                    div.check(class="min-w-[1rem]")
+                                    label(for='cod' class="w-full text-xs cursor-pointer") 
+                                       div.flex.justify-between.gap-1(class="sm:flex-col sm:items-start") 
+                                          div 
+                                             span Cash On Delivery
+                                             p.text-content3.text-xs After your order is delivered, make a cash payment
+                                          img(class="h-[30px]" src="../../assets/images/ecommerce/cash-on-delivery.png" alt="cash on delivery" class="rtl:2sm:pl-unset rtl:2sm:pr-6")
                               div.flex.justify-between.items-center(class="sm:flex-col sm:gap-3")
                                  a(href="cart.html").btn.bg-secondary.text-xs.text-white.flex.items-center.gap-2(class="py-2 !w-fit sm:!w-full justify-center !m-0" type='button') 
                                     i(data-feather="arrow-left" class="w-4 h-4 stroke-white")
@@ -278,7 +282,7 @@ html(lang='en')
                         input(type="text" id="name" placeholder="Enter your name" required)                                                
                      div 
                         label(for="address") Address 
-                        textarea(placeholder="Enter your address.." row="3" id="address" class="p-[11px] focus:!border-border-light").w-full.border.border-border-light.rounded-5.text-xs.text-content
+                        textarea(placeholder="Enter your address" row="3" id="address" class="p-[11px] focus:!border-border-light").w-full.border.border-border-light.rounded-5.text-xs.text-content
                      div 
                         label(for="country") Address Type
                         select.form-select.block.w-full.px-3.text-xs.font-normal.text-content3.bg-white.bg-clip-padding.bg-no-repeat.border.border-border-light.rounded-5.transition.ease-in-out.m-0(class='min-w-[150px] py-[9px]' id="sortby" aria-label='Default select example')
