--- a/assets/pug/pages/template/invoice-preview.pug
+++ b/assets/pug/pages/template/invoice-preview.pug
@@ -75,16 +75,16 @@ html(lang='en')
                               tr
                                  td(class="min-w-[220px]") 
                                     p.text-title.text-xs.font-bold.uppercase(class="!mb-0") Shipping Address 
-                                    p.text-title.text-xs.font-bold 	Vilma Gerhold
-                                    p.font-medium.text-content3 14300 Gallant Fox Ln, Bowie
-                                    p.font-medium.text-content3 Maryland, 20715, US
-                                    p.font-medium.text-content3 (301) 464-0110
+                                    p.text-title.text-xs.font-bold(class="last:!mb-0") 	Vilma Gerhold
+                                    p.font-medium.text-content3(class="last:!mb-0") 14300 Gallant Fox Ln, Bowie
+                                    p.font-medium.text-content3(class="last:!mb-0") Maryland, 20715, US
+                                    p.font-medium.text-content3(class="last:!mb-0") (301) 464-0110
                                  td(class="min-w-[220px]") 
                                     p.text-title.text-xs.font-bold.uppercase(class="!mb-0") Billing Address 
-                                    p.text-title.text-xs.font-bold 	Vilma Gerhold
-                                    p.font-medium.text-content3 14300 Gallant Fox Ln, Bowie
-                                    p.font-medium.text-content3 Maryland, 20715, US
-                                    p.font-medium.text-content3 (301) 464-0110
+                                    p.text-title.text-xs.font-bold(class="last:!mb-0") 	Vilma Gerhold
+                                    p.font-medium.text-content3(class="last:!mb-0") 14300 Gallant Fox Ln, Bowie
+                                    p.font-medium.text-content3(class="last:!mb-0") Maryland, 20715, US
+                                    p.font-medium.text-content3(class="last:!mb-0") (301) 464-0110
                               tr  
                                  td(colspan="2" class="invoice-table")
                                     div.overflow-auto.custom-scroll  
@@ -92,13 +92,13 @@ html(lang='en')
                               tr  
                                  td(colspan="2" class="!text-left rtl:!text-right")
                                     p.text-title.text-xs.font-bold.uppercase Payment Detail
-                                    p.text-title.text-xs.font-semibold Payment Method: 
+                                    p.text-title.text-xs.font-semibold(class="last:!mb-0") Payment Method: 
                                        span.font-medium.text-content3 Mastercard
-                                    p.text-title.text-xs.font-semibold Card Holder: 
+                                    p.text-title.text-xs.font-semibold(class="last:!mb-0") Card Holder: 
                                        span.font-medium.text-content3 	Vilma Gerhold
-                                    p.text-title.text-xs.font-semibold Card Number: 
+                                    p.text-title.text-xs.font-semibold(class="last:!mb-0") Card Number: 
                                        span.font-medium.text-content3 xxx xxxx xxxx 7159       
-                                    p.text-title.text-xs.font-semibold Total Amount: 
+                                    p.text-title.text-xs.font-semibold(class="last:!mb-0") Total Amount: 
                                        span.font-medium.text-content3 $787.6                                     
                               tr 
                                  td(colspan="2" class="!text-left rtl:!text-right")
