--- a/assets/pug/pages/template/tabs.pug
+++ b/assets/pug/pages/template/tabs.pug
@@ -65,35 +65,35 @@ html(lang='en')
                               div.flex.flex-wrap.items-center.gap-4 
                                 div.flex.items-center.gap-2  
                                   div.avatar  
-                                    div.w-10.rounded-full(class="xl:w-9") 
+                                    div.w-10.h-10.rounded-full(class="xl:w-9") 
                                       img(src='../../assets/images/avatar/25.jpg' alt='avatar')
                                   div.flex.flex-col.gap-1
                                     h3.text-xs.font-bold(class="leading-none lg:text-2xs") Angela R. Lear
                                     span.text-content.text-3xs 239-664-7751 
                                 div.flex.items-center.gap-2  
                                   div.avatar  
-                                    div.w-10.rounded-full(class="xl:w-9") 
+                                    div.w-10.h-10.rounded-full(class="xl:w-9") 
                                       img(src='../../assets/images/avatar/15.jpg' alt='avatar')
                                   div.flex.flex-col.gap-1
                                     h3.text-xs.font-bold(class="leading-none lg:text-2xs")  Marjorie W. Martin
                                     span.text-content.text-3xs 440-494-0729
                                 div.flex.items-center.gap-2  
                                   div.avatar  
-                                    div.w-10.rounded-full(class="xl:w-9") 
+                                    div.w-10.h-10.rounded-full(class="xl:w-9") 
                                       img(src='../../assets/images/avatar/6.jpg' alt='avatar')
                                   div.flex.flex-col.gap-1
                                     h3.text-xs.font-bold(class="leading-none lg:text-2xs") Russell P. Renfrew
                                     span.text-content.text-3xs 718-740-8438
                                 div.flex.items-center.gap-2  
                                   div.avatar  
-                                    div.w-10.rounded-full(class="xl:w-9") 
+                                    div.w-10.h-10.rounded-full(class="xl:w-9") 
                                       img(src='../../assets/images/avatar/27.jpg' alt='avatar')
                                   div.flex.flex-col.gap-1
                                     h3.text-xs.font-bold(class="leading-none lg:text-2xs") Kevin A. Ek
                                     span.text-content.text-3xs 218-793-6609
                                 div.flex.items-center.gap-2  
                                   div.avatar  
-                                    div.w-10.rounded-full(class="xl:w-9") 
+                                    div.w-10.h-10.rounded-full(class="xl:w-9") 
                                       img(src='../../assets/images/avatar/26.jpg' alt='avatar')
                                   div.flex.flex-col.gap-1
                                     h3.text-xs.font-bold(class="leading-none lg:text-2xs") Carolyn A. Sutton
@@ -102,35 +102,35 @@ html(lang='en')
                               div.flex.flex-wrap.items-center.gap-4 
                                 div.flex.items-center.gap-2  
                                   div.avatar  
-                                    div.w-10.rounded-full(class="xl:w-9") 
+                                    div.w-10.h-10.rounded-full(class="xl:w-9") 
                                       img(src='../../assets/images/avatar/31.jpg' alt='avatar')
                                   div.flex.flex-col.gap-1
                                     h3.text-xs.font-bold(class="leading-none lg:text-2xs") Emily T. Hooper
                                     span.text-content.text-3xs 258-664-7751 
                                 div.flex.items-center.gap-2  
                                   div.avatar  
-                                    div.w-10.rounded-full(class="xl:w-9") 
+                                    div.w-10.h-10.rounded-full(class="xl:w-9") 
                                       img(src='../../assets/images/avatar/34.jpg' alt='avatar')
                                   div.flex.flex-col.gap-1
                                     h3.text-xs.font-bold(class="leading-none lg:text-2xs")  Ann J. Strickland
                                     span.text-content.text-3xs 440-851-0729
                                 div.flex.items-center.gap-2  
                                   div.avatar  
-                                    div.w-10.rounded-full(class="xl:w-9") 
+                                    div.w-10.h-10.rounded-full(class="xl:w-9") 
                                       img(src='../../assets/images/avatar/22.jpg' alt='avatar')
                                   div.flex.flex-col.gap-1
                                     h3.text-xs.font-bold(class="leading-none lg:text-2xs") Natasha W. Watson
                                     span.text-content.text-3xs 698-740-8438
                                 div.flex.items-center.gap-2  
                                   div.avatar  
-                                    div.w-10.rounded-full(class="xl:w-9") 
+                                    div.w-10.h-10.rounded-full(class="xl:w-9") 
                                       img(src='../../assets/images/avatar/13.jpg' alt='avatar')
                                   div.flex.flex-col.gap-1
                                     h3.text-xs.font-bold(class="leading-none lg:text-2xs") Thomas A. Leroy
                                     span.text-content.text-3xs 218-793-7845
                                 div.flex.items-center.gap-2  
                                   div.avatar  
-                                    div.w-10.rounded-full(class="xl:w-9") 
+                                    div.w-10.h-10.rounded-full(class="xl:w-9") 
                                       img(src='../../assets/images/avatar/8.jpg' alt='avatar')
                                   div.flex.flex-col.gap-1
                                     h3.text-xs.font-bold(class="leading-none lg:text-2xs") Mark S. Ward
@@ -152,7 +152,7 @@ html(lang='en')
                           |               &lt;div class="flex flex-wrap gap-4"&gt;
                           |                   &lt;div class="flex flex-wrap gap-2"&gt;
                           |                       &lt;div class="avatar"&gt;
-                          |                           &lt;div class="w-10 rounded-full xl:w-9"&gt;
+                          |                           &lt;div class="w-10 h-10 rounded-full xl:w-9"&gt;
                           |                               &lt;img src="../../image.jpg" alt="avatar"/&gt;
                           |                           &lt;/div&gt;
                           |                       &lt;/div&gt;
@@ -167,7 +167,7 @@ html(lang='en')
                           |               &lt;div class="flex flex-wrap gap-4"&gt;
                           |                   &lt;div class="flex flex-wrap gap-2"&gt;
                           |                       &lt;div class="avatar"&gt;
-                          |                           &lt;div class="w-10 rounded-full xl:w-9"&gt;
+                          |                           &lt;div class="w-10 h-10 rounded-full xl:w-9"&gt;
                           |                               &lt;img src="../../image.jpg" alt="avatar"/&gt;
                           |                           &lt;/div&gt;
                           |                       &lt;/div&gt;
@@ -432,7 +432,7 @@ html(lang='en')
                                 div.flex.justify-between.gap-2.pb-2.border-b.border-border-light(class="sm:gap-1 sm:flex-col")  
                                   div.flex.items-center.gap-2  
                                     div.avatar  
-                                      div.w-10.rounded-full(class="xl:w-9") 
+                                      div.w-10.rounded-full.h-10(class="xl:w-9 xl:h-9") 
                                         img(src='../../assets/images/avatar/8.jpg' alt='avatar')
                                     div.flex.flex-col.gap-1
                                       h3.text-xs.font-bold(class="leading-none lg:text-2xs") Robot Caslin
@@ -475,7 +475,7 @@ html(lang='en')
                           |                   &lt;div class="flex justify-between gap-2 pb-2 border-b border-border-light"&gt; 
                           |                       &lt;div class="flex items-center gap-2"&gt; 
                           |                           &lt;div class="avatar"&gt;
-                          |                               &lt;div class="w-10 rounded-full xl:w-9"&gt;
+                          |                               &lt;div class="w-10 h-10 rounded-full xl:h-9 xl:w-9"&gt;
                           |                                   &lt;img src="../../image.jpg" alt="avatar"/&gt;
                           |                               &lt;/div&gt;
                           |                           &lt;/div&gt;
