--- a/html/template/cart.html
+++ b/html/template/cart.html
@@ -1351,19 +1351,17 @@
             </div>
             <div class="col-span-3 xl:col-span-4 lg:col-span-12">
               <div class="card sticky top-0"> 
-                <div class="card-header">
+                <div class="card-header border-b border-border-light dark:border-sidebar-dark2">
                   <h3 class="mb-2 font-bold text-title">Cart Information </h3>
-                  <div class="divider w-full"> </div>
                 </div>
                 <div class="card-body flex flex-col gap-2"> 
-                  <div class="flex flex-col gap-1"> 
+                  <div class="flex flex-col gap-1 pb-4 border-b border-border-light dark:border-sidebar-dark2"> 
                     <label class="font-bold text-xs text-primary" for="coupon-code">Apply Coupon Code</label>
                     <div class="flex items-center justify-center"> 
                       <input class="p-[11px] w-full rounded-br-none rounded-tr-none border border-border-light rounded-5 text-xs text-content rtl:rounded-br-5 rtl:rounded-bl-none rtl:rounded-tr-5 rtl:rounded-tl-none" type="text" placeholder="Enter code" id="coupon-code"><span class="flex items-center justify-center bg-primary text-white rounded-5 border-none rounded-bl-none rounded-tl-none font-medium text-xs py-[12px] px-[11px] rtl:rounded-bl-5 rtl:rounded-br-none rtl:rounded-tr-none rtl:rounded-tl-5">Apply</span>
                     </div>
                   </div>
-                  <div class="divider w-full my-3"> </div>
-                  <ul class="flex flex-col gap-2"> 
+                  <ul class="flex flex-col gap-2 py-1 pb-4 border-b border-border-light dark:border-sidebar-dark2">
                     <li class="flex items-center justify-between text-content font-bold">
                       <h6>Subtotal  </h6>
                       <h6>$511 </h6>
@@ -1377,7 +1375,6 @@
                       <h6>$6.90 </h6>
                     </li>
                   </ul>
-                  <div class="divider w-full my-3"> </div>
                   <ul class="flex flex-col gap-2"> 
                     <li class="flex items-center justify-between text-primary font-extrabold"> 
                       <h6>Total(USD) </h6>
