--- a/html/template/email.html
+++ b/html/template/email.html
@@ -1006,7 +1006,7 @@
             <div class="col-span-3 xl:col-span-4"> 
               <!-- email left sidebar Start -->
               <div class="card gap-0 lg:z-10 2xl:p-card-spacing lg:p-3 left-sidebar-aside z-[3] lg:w-[280px] sticky min-lg:top-0 sm:w-[269px] lg:fixed lg:h-[100vh]">
-                <div class="flex justify-between">   
+                <div class="flex justify-between">
                   <div class="flex items-center gap-3 mb-4 sm:gap-1">
                     <div class="avatar"> 
                       <div class="w-10 rounded-full h-10"><img src="../../assets/images/avatar/2.jpg" alt="avatar"></div>
@@ -1016,14 +1016,14 @@
                       <div class="flex items-center gap-1 mt-1"><span class="text-content3 text-2xs">alan.Dmitriy@Groshev</span></div>
                     </div>
                   </div>
-                  <button class="hidden lg:flex left-sidebar-toggle">  <i class="w-5 h-5 stroke-title" data-feather="x"> </i></button>
+                  <button class="hidden lg:flex left-sidebar-toggle"> <i class="w-5 h-5 stroke-title" data-feather="x"></i></button>
                 </div>
                 <label class="button-label btn-primary flex gap-2 items-center justify-center w-full text-sm" for="modal-16">
                   <svg class="w-[1.125rem] h-[1.125rem] stroke-white"> 
                     <use href="../../assets/svg/sprite.svg#Message"> </use>
-                  </svg>New Mail 
+                  </svg>New Mail
                 </label>
-                <div class="mt-4 bg-gray-light dark:bg-sidebar-dark2 lg:h-full">
+                <div class="mt-4 bg-gray-light dark:bg-sidebar-dark2 lg:h-full lg:overflow-auto">
                   <ul class="flex flex-col gap-0">
                     <li class="pl-3 pr-2 rounded-5 rtl:pl-2 py-[0.6rem] last:mb-4 hover:bg-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark mr-4 first:mt-[20px] hover:rounded-tr-[25px] hover:rounded-br-[25px] rtl:hover:rounded-tr-none rtl:hover:rounded-br-none rtl:hover:rounded-tl-[25px] rtl:hover:rounded-bl-[25px] bg-white rounded-tr-[25px] rounded-br-[25px] rtl:rounded-tr-none rtl:rounded-br-none rtl:rounded-tl-[25px] rtl:rounded-bl-[25px]"><a class="flex items-center justify-between" href="javascript:void(0)"><span class="flex items-center gap-2 text-xs text-primary font-medium">
                           <svg class="w-[1.125rem] h-[1.125rem] stroke-primary hover:primary"> 
@@ -1440,7 +1440,7 @@
         </div>
         <div class="py-[4px] dark:bg-mode-200">
           <div class="px-[15px] py-7  h-[calc(100vh_-_139px)] overflow-auto ">
-            <ul class="flex flex-col gap-7 mode-event">  
+            <ul class="flex flex-col gap-7 mode-event">
               <li>
                 <div>
                   <h5 class="leading-none text-dark text-sm font-semibold">Template Mode</h5><span class="leading-none text-content text-xs font-medium">Choose template mode dark & light</span>
