--- a/html/template/invoice-create.html
+++ b/html/template/invoice-create.html
@@ -1003,11 +1003,11 @@
         <div class="page-body">
           <div class="grid grid-cols-12 gap-card-gap">
             <div class="col-span-12">
-              <div class="card m-auto max-w-5xl invoice-preview overflow-auto custom-scroll"> 
+              <div class="card max-w-5xl m-auto overflow-auto invoice-preview custom-scroll"> 
                 <div class="grid grid-cols-12 gap-card-gap sm:gap-1">
                   <div class="col-span-4 lg:col-span-6 sm:col-span-12"><img class="w-20" src="../../assets/images/logo/logo-dark.png" alt="logo">
                     <div class="mt-4"> 
-                      <form class="theme-form m-0">
+                      <form class="m-0 theme-form">
                         <label for="address">Address </label>
                         <textarea class="p-[11px] focus:!border-border-light w-full border border-border-light rounded-5 text-xs text-content" placeholder="Enter address" row="3" id="address"></textarea>
                       </form>
@@ -1016,7 +1016,7 @@
                   <div class="col-span-4 lg:col-span-6 lg:hidden"></div>
                   <div class="col-span-4 lg:col-span-6 sm:col-span-12">          
                     <div>
-                      <form class="theme-form m-0 flex flex-col gap-2">
+                      <form class="flex flex-col gap-2 m-0 theme-form">
                         <input class="font-medium.text-content3" type="text" id="register" placeholder="Registration no.." required>
                         <input class="font-medium.text-content3" type="email" id="email" placeholder="Email id.." required>
                         <input class="font-medium.text-content3" type="number" id="contact" placeholder="Contact no.. " required>
@@ -1025,7 +1025,7 @@
                   </div>
                 </div>
                 <div class="divider w-full bg-gray-light"></div>
-                <form class="theme-form m-0">
+                <form class="m-0 theme-form">
                   <div class="grid grid-cols-12 gap-card-gap">
                     <div class="col-span-3 md:col-span-6 sm:col-span-12 min-w-[120px]">
                       <label for="number">INVOICE NO</label>
@@ -1052,8 +1052,8 @@
                 <div class="divider w-full bg-gray-light"></div>
                 <div class="grid grid-cols-12 gap-card-gap">
                   <div class="col-span-4 lg:col-span-6 sm:col-span-12">
-                    <form class="theme-form m-0 flex flex-col gap-2">
-                      <label class="!mb-0" for="address">Shipping Address</label>
+                    <form class="flex flex-col gap-2 m-0 theme-form">
+                      <label class="!mb-1" for="address">Shipping Address</label>
                       <input type="text" id="name" placeholder="Vilma Gerhold" required>
                       <textarea class="p-[11px] focus:!border-border-light w-full border border-border-light rounded-5 text-xs text-content" placeholder="14300 Gallant Fox Ln, Bowie, Maryland, 20715, US" row="3" id="address"></textarea>
                       <input type="number" id="name" placeholder="(301) 464-0110" required>
@@ -1061,8 +1061,8 @@
                   </div>
                   <div class="col-span-4 lg:hidden"></div>
                   <div class="col-span-4 lg:col-span-6 sm:col-span-12">
-                    <form class="theme-form m-0 flex flex-col gap-2">
-                      <label class="!mb-0" for="address">Billing Address</label>
+                    <form class="flex flex-col gap-2 m-0 theme-form">
+                      <label class="!mb-1" for="address">Billing Address</label>
                       <input type="text" id="name" placeholder="Vilma Gerhold" required>
                       <textarea class="p-[11px] focus:!border-border-light w-full border border-border-light rounded-5 text-xs text-content" placeholder="14300 Gallant Fox Ln, Bowie, Maryland, 20715, US" row="3" id="address"></textarea>
                       <input type="number" id="name" placeholder="(301) 464-0110" required>
@@ -1089,8 +1089,8 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <td><img class="w-16 h-14 rounded-5" src="../../assets/images/ecommerce/11.jpg" alt="11.jpg"></td>
-                          <td class="min-w-[158px]">
+                          <td><img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/11.jpg" alt="11.jpg"></td>
+                          <td class="min-w-[560px] 2lg:min-w-[450px]">
                             <div>
                               <h4 class="text-xs font-semibold text-title">Coffee Cup</h4><span class="block mt-1 font-semibold text-2xs text-content">$98 * 2</span>
                             </div>
@@ -1098,8 +1098,8 @@
                           <td class="min-w-[.625rem]">$190</td>
                         </tr>
                         <tr>
-                          <td><img class="w-16 h-14 rounded-5" src="../../assets/images/ecommerce/13.jpg" alt="13.jpg"></td>
-                          <td class="min-w-[158px]">
+                          <td><img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/13.jpg" alt="13.jpg"></td>
+                          <td class="min-w-[560px] 2lg:min-w-[450px]">
                             <div>
                               <h4 class="text-xs font-semibold text-title">Facewash - For Good skincare</h4><span class="block mt-1 font-semibold text-2xs text-content">$75 * 2</span>
                             </div>
@@ -1107,8 +1107,8 @@
                           <td class="min-w-[.625rem]">$150</td>
                         </tr>
                         <tr>
-                          <td><img class="w-16 h-14 rounded-5" src="../../assets/images/ecommerce/14.jpg" alt="14.jpg"></td>
-                          <td class="min-w-[158px]">
+                          <td><img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/14.jpg" alt="14.jpg"></td>
+                          <td class="min-w-[560px] 2lg:min-w-[450px]">
                             <div>
                               <h4 class="text-xs font-semibold text-title">Perfume - Great fragrance</h4><span class="block mt-1 font-semibold text-2xs text-content">$299</span>
                             </div>
@@ -1116,8 +1116,8 @@
                           <td class="min-w-[.625rem]">$299</td>
                         </tr>
                         <tr>
-                          <td><img class="w-16 h-14 rounded-5" src="../../assets/images/ecommerce/16.jpg" alt="16.jpg"></td>
-                          <td class="min-w-[158px]">
+                          <td><img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/16.jpg" alt="16.jpg"></td>
+                          <td class="min-w-[560px] 2lg:min-w-[450px]">
                             <div>
                               <h4 class="text-xs font-semibold text-title">Women's Leather Bags</h4><span class="block mt-1 font-semibold text-2xs text-content">$212</span>
                             </div>
@@ -1125,24 +1125,24 @@
                           <td class="min-w-[.625rem]">$212</td>
                         </tr>
                         <tr> 
-                          <td class="font-bold text-xs" colspan="2">Sub Total :</td>
-                          <td class="font-bold text-xs text-end">$851.00 </td>
+                          <td class="text-xs font-bold" colspan="2">Sub Total :</td>
+                          <td class="text-xs font-bold text-end">$851.00 </td>
                         </tr>
                         <tr> 
                           <td class="text-xs" colspan="2">Discount :</td>
-                          <td class="text-content3 text-xs text-end">-$50.00</td>
+                          <td class="text-xs text-content3 text-end">-$50.00</td>
                         </tr>
                         <tr> 
                           <td class="text-xs" colspan="2">Shipping Charge :</td>
-                          <td class="text-content3 text-xs text-end">-$25.99  </td>
+                          <td class="text-xs text-content3 text-end">-$25.99  </td>
                         </tr>
                         <tr> 
                           <td class="text-xs" colspan="2">Tax :</td>
-                          <td class="text-content3 text-xs text-end">-$12.59  </td>
+                          <td class="text-xs text-content3 text-end">-$12.59  </td>
                         </tr>
                         <tr> 
-                          <td class="font-bold text-xs" colspan="2">Total (USD) :</td>
-                          <td class="font-bold text-xs text-end">$787.6 </td>
+                          <td class="text-xs font-bold" colspan="2">Total (USD) :</td>
+                          <td class="text-xs font-bold text-end">$787.6 </td>
                         </tr>
                       </tbody>
                     </table>
@@ -1150,7 +1150,7 @@
                 </div>
                 <div class="divider w-full bg-gray-light"></div>
                 <div class="w-[245px] max-w-[300px]">
-                  <form class="theme-form m-0 flex flex-col gap-2">
+                  <form class="flex flex-col gap-2 m-0 theme-form">
                     <label class="!mb-0" for="address">Payment Detail</label>
                     <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px]" id="paymentMethod" aria-label="Default select example">
                       <option selected="">Payment Method</option>
@@ -1161,11 +1161,11 @@
                     </select>
                     <input type="text" id="card-name" placeholder="Vilma Gerhold" required>
                     <input type="number" id="name" placeholder="xxx xxxx xxxx 7159" required>
-                    <input type="number" id="name" placeholder="$787.6" readonly>
+                    <input type="number" id="name" placeholder="$787.6">
                   </form>
                 </div>
                 <div class="divider w-full bg-gray-light"></div>
-                <form class="theme-form m-0 flex flex-col gap-2">
+                <form class="flex flex-col gap-2 m-0 theme-form">
                   <label for="notes">Notes</label>
                   <p class="font-medium text-content3 !text-left rtl:!text-right">All accounts must be settled within seven days of receiving an invoice. to be paid by check, credit card, or online direct deposit. If the account is not paid within seven days, the agreed-upon quoted fee indicated above will be charged to the credits details provided as confirmation of the task completed.</p>
                 </form>
