--- a/html/template/invoice-preview.html
+++ b/html/template/invoice-preview.html
@@ -1046,17 +1046,17 @@
                     <tr>
                       <td class="min-w-[220px]"> 
                         <p class="text-title text-xs font-bold uppercase !mb-0">Shipping Address </p>
-                        <p class="text-title text-xs font-bold">	Vilma Gerhold</p>
-                        <p class="font-medium text-content3">14300 Gallant Fox Ln, Bowie</p>
-                        <p class="font-medium text-content3">Maryland, 20715, US</p>
-                        <p class="font-medium text-content3">(301) 464-0110</p>
+                        <p class="text-title text-xs font-bold last:!mb-0">	Vilma Gerhold</p>
+                        <p class="font-medium text-content3 last:!mb-0">14300 Gallant Fox Ln, Bowie</p>
+                        <p class="font-medium text-content3 last:!mb-0">Maryland, 20715, US</p>
+                        <p class="font-medium text-content3 last:!mb-0">(301) 464-0110</p>
                       </td>
                       <td class="min-w-[220px]"> 
                         <p class="text-title text-xs font-bold uppercase !mb-0">Billing Address </p>
-                        <p class="text-title text-xs font-bold">	Vilma Gerhold</p>
-                        <p class="font-medium text-content3">14300 Gallant Fox Ln, Bowie</p>
-                        <p class="font-medium text-content3">Maryland, 20715, US</p>
-                        <p class="font-medium text-content3">(301) 464-0110</p>
+                        <p class="text-title text-xs font-bold last:!mb-0">	Vilma Gerhold</p>
+                        <p class="font-medium text-content3 last:!mb-0">14300 Gallant Fox Ln, Bowie</p>
+                        <p class="font-medium text-content3 last:!mb-0">Maryland, 20715, US</p>
+                        <p class="font-medium text-content3 last:!mb-0">(301) 464-0110</p>
                       </td>
                     </tr>
                     <tr> 
@@ -1072,8 +1072,8 @@
                             </thead>
                             <tbody>
                               <tr>
-                                <td><img class="w-16 h-14 rounded-5" src="../../assets/images/ecommerce/11.jpg" alt="11.jpg"></td>
-                                <td class="min-w-[158px]">
+                                <td><img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/11.jpg" alt="11.jpg"></td>
+                                <td class="min-w-[560px] 2lg:min-w-[450px]">
                                   <div>
                                     <h4 class="text-xs font-semibold text-title">Coffee Cup</h4><span class="block mt-1 font-semibold text-2xs text-content">$98 * 2</span>
                                   </div>
@@ -1081,8 +1081,8 @@
                                 <td class="min-w-[.625rem]">$190</td>
                               </tr>
                               <tr>
-                                <td><img class="w-16 h-14 rounded-5" src="../../assets/images/ecommerce/13.jpg" alt="13.jpg"></td>
-                                <td class="min-w-[158px]">
+                                <td><img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/13.jpg" alt="13.jpg"></td>
+                                <td class="min-w-[560px] 2lg:min-w-[450px]">
                                   <div>
                                     <h4 class="text-xs font-semibold text-title">Facewash - For Good skincare</h4><span class="block mt-1 font-semibold text-2xs text-content">$75 * 2</span>
                                   </div>
@@ -1090,8 +1090,8 @@
                                 <td class="min-w-[.625rem]">$150</td>
                               </tr>
                               <tr>
-                                <td><img class="w-16 h-14 rounded-5" src="../../assets/images/ecommerce/14.jpg" alt="14.jpg"></td>
-                                <td class="min-w-[158px]">
+                                <td><img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/14.jpg" alt="14.jpg"></td>
+                                <td class="min-w-[560px] 2lg:min-w-[450px]">
                                   <div>
                                     <h4 class="text-xs font-semibold text-title">Perfume - Great fragrance</h4><span class="block mt-1 font-semibold text-2xs text-content">$299</span>
                                   </div>
@@ -1099,8 +1099,8 @@
                                 <td class="min-w-[.625rem]">$299</td>
                               </tr>
                               <tr>
-                                <td><img class="w-16 h-14 rounded-5" src="../../assets/images/ecommerce/16.jpg" alt="16.jpg"></td>
-                                <td class="min-w-[158px]">
+                                <td><img class="min-w-[4rem] w-16 h-14 rounded-5" src="../../assets/images/ecommerce/16.jpg" alt="16.jpg"></td>
+                                <td class="min-w-[560px] 2lg:min-w-[450px]">
                                   <div>
                                     <h4 class="text-xs font-semibold text-title">Women's Leather Bags</h4><span class="block mt-1 font-semibold text-2xs text-content">$212</span>
                                   </div>
@@ -1108,24 +1108,24 @@
                                 <td class="min-w-[.625rem]">$212</td>
                               </tr>
                               <tr> 
-                                <td class="font-bold text-xs" colspan="2">Sub Total :</td>
-                                <td class="font-bold text-xs text-end">$851.00 </td>
+                                <td class="text-xs font-bold" colspan="2">Sub Total :</td>
+                                <td class="text-xs font-bold text-end">$851.00 </td>
                               </tr>
                               <tr> 
                                 <td class="text-xs" colspan="2">Discount :</td>
-                                <td class="text-content3 text-xs text-end">-$50.00</td>
+                                <td class="text-xs text-content3 text-end">-$50.00</td>
                               </tr>
                               <tr> 
                                 <td class="text-xs" colspan="2">Shipping Charge :</td>
-                                <td class="text-content3 text-xs text-end">-$25.99  </td>
+                                <td class="text-xs text-content3 text-end">-$25.99  </td>
                               </tr>
                               <tr> 
                                 <td class="text-xs" colspan="2">Tax :</td>
-                                <td class="text-content3 text-xs text-end">-$12.59  </td>
+                                <td class="text-xs text-content3 text-end">-$12.59  </td>
                               </tr>
                               <tr> 
-                                <td class="font-bold text-xs" colspan="2">Total (USD) :</td>
-                                <td class="font-bold text-xs text-end">$787.6 </td>
+                                <td class="text-xs font-bold" colspan="2">Total (USD) :</td>
+                                <td class="text-xs font-bold text-end">$787.6 </td>
                               </tr>
                             </tbody>
                           </table>
@@ -1135,10 +1135,10 @@
                     <tr> 
                       <td class="!text-left rtl:!text-right" colspan="2">
                         <p class="text-title text-xs font-bold uppercase">Payment Detail</p>
-                        <p class="text-title text-xs font-semibold">Payment Method: <span class="font-medium text-content3">Mastercard</span></p>
-                        <p class="text-title text-xs font-semibold">Card Holder: <span class="font-medium text-content3">	Vilma Gerhold</span></p>
-                        <p class="text-title text-xs font-semibold">Card Number: <span class="font-medium text-content3">xxx xxxx xxxx 7159       </span></p>
-                        <p class="text-title text-xs font-semibold">Total Amount: <span class="font-medium text-content3">$787.6                                     </span></p>
+                        <p class="text-title text-xs font-semibold last:!mb-0">Payment Method: <span class="font-medium text-content3">Mastercard</span></p>
+                        <p class="text-title text-xs font-semibold last:!mb-0">Card Holder: <span class="font-medium text-content3">	Vilma Gerhold</span></p>
+                        <p class="text-title text-xs font-semibold last:!mb-0">Card Number: <span class="font-medium text-content3">xxx xxxx xxxx 7159       </span></p>
+                        <p class="text-title text-xs font-semibold last:!mb-0">Total Amount: <span class="font-medium text-content3">$787.6                                     </span></p>
                       </td>
                     </tr>
                     <tr> 
