--- a/html/template/monochrome-mode.html
+++ b/html/template/monochrome-mode.html
@@ -1013,7 +1013,7 @@
                         <div class="flex items-center gap-[9px]">
                           <div class="p-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relative">
                             <div class="bg-success opacity-25 absolute z-[1] inset-0 rounded-full"> </div>
-                            <svg class="fill-success 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
+                            <svg class="strong-hover-shake fill-success 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
                               <use href="../../../assets/svg/_bold_sprite.svg#User"></use>
                             </svg>
                           </div>
@@ -1043,7 +1043,7 @@
                         <div class="flex items-center gap-[9px]">
                           <div class="p-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relative">
                             <div class="bg-title opacity-25 absolute z-[1] inset-0 rounded-full"> </div>
-                            <svg class="fill-title 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
+                            <svg class="strong-hover-shake fill-title 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
                               <use href="../../../assets/svg/_bold_sprite.svg#Like"></use>
                             </svg>
                           </div>
@@ -1073,7 +1073,7 @@
                         <div class="flex items-center gap-[9px]">
                           <div class="p-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relative">
                             <div class="bg-secondary opacity-25 absolute z-[1] inset-0 rounded-full"> </div>
-                            <svg class="fill-secondary 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
+                            <svg class="strong-hover-shake fill-secondary 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
                               <use href="../../../assets/svg/_bold_sprite.svg#Bold-Chat"></use>
                             </svg>
                           </div>
@@ -1103,7 +1103,7 @@
                         <div class="flex items-center gap-[9px]">
                           <div class="p-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relative">
                             <div class="bg-warning opacity-25 absolute z-[1] inset-0 rounded-full"> </div>
-                            <svg class="fill-warning 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
+                            <svg class="strong-hover-shake fill-warning 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
                               <use href="../../../assets/svg/_bold_sprite.svg#Save"></use>
                             </svg>
                           </div>
@@ -1202,10 +1202,10 @@
                           </div>
                           <div class="avatar-group -space-x-6 justify-center">
                             <div class="avatar w-12 h-12 5xl:w-11 5xl:h-11 border-[2px] border-white hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0">
-                              <div><img src="../../assets/images/avatar/1.jpg" alt="avatar"/></div>
+                              <div class="h-12"><img src="../../assets/images/avatar/1.jpg" alt="avatar"/></div>
                             </div>
                             <div class="avatar w-12 h-12 5xl:w-11 5xl:h-11 border-[2px] border-white hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0">
-                              <div><img src="../../assets/images/avatar/2.jpg" alt="avatar"/></div>
+                              <div class="h-12"><img src="../../assets/images/avatar/2.jpg" alt="avatar"/></div>
                             </div>
                             <div class="avatar placeholder w-12 h-12 5xl:w-11 5xl:h-11 border-[2px] bg-gray-light border-white hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0">
                               <div><span class="text-xs font-bold text-title">26+</span></div>
