--- a/html/template/product.html
+++ b/html/template/product.html
@@ -1031,17 +1031,17 @@
             <div class="col-span-8 xl:col-span-7 md:col-span-12">
               <div> 
                 <div class="flex items-center gap-2 justify-between">
-                  <h3 class="leading-none font-semibold 3xl:flex 3xl:justify-between 3xl:items-center text-title mb-3">Women's Latest Bags Collections</h3><a class="btn bg-gray-light dark:bg-sidebar-dark2 p-2" href="add-product.html"><i class="w-4 h-4 stroke-title" data-feather="plus"></i></a>
+                  <h3 class="leading-none mb-3 font-semibold 3xl:flex 3xl:justify-between 3xl:items-center text-title sm:text-base">Women's Latest Bags Collections</h3><a class="p-2 btn hover:dark:bg-sidebar-dark2 hover:bg-gray-light" href="add-product.html"><i class="w-4 h-4 scale-100 stroke-title" data-feather="plus"></i></a>
                 </div>
-                <div class="flex items-center gap-3 mb-3 flex-wrap"><span class="text-content3 text-xs leading-none border-r border-border-light rtl:border-r-0 rtl:border-l rtl:pr-unset rtl:pl-3 pr-3">#15704 </span>
-                  <p class="text-title text-xs leading-none font-semibold border-r border-border-light rtl:border-r-0 rtl:border-l rtl:pr-unset rtl:pl-3 pr-3"> <span class="text-content3 text-xs leading-none">Seller: </span>Backy Fashion              </p>
+                <div class="flex items-center gap-3 mb-3 flex-wrap"><span class="text-content3 text-xs leading-none pr-3 border-r border-border-light rtl:border-r-0 rtl:border-l rtl:pr-unset rtl:pl-3">#15704 </span>
+                  <p class="text-title text-xs leading-none font-semibold pr-3 border-r border-border-light rtl:border-r-0 rtl:border-l rtl:pr-unset rtl:pl-3"> <span class="text-content3 text-xs leading-none">Seller: </span>Backy Fashion              </p>
                   <p class="text-title text-xs leading-none font-semibold"><span class="text-content3 text-xs leading-none">Available: </span>In Stock</p>
                 </div>
                 <div class="flex items-center gap-2 mb-4">
                   <div class="flex items-center gap-0"><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-content stroke-transparent" data-feather="star"></i></div>
                   <label class="text-content3 text-xs font-semibold" for="4above">1059 ratings</label>
                 </div>
-                <h4 class="font-semibold text-title lg:text-lg my-2">$500 
+                <h4 class="my-2 font-semibold text-title lg:text-lg">$500 
                   <del class="text-danger">$350 </del>
                 </h4>
                 <div class="divider w-full my-4 before:!bg-border-light after:!bg-border-light 2lg:my-3"></div>
@@ -1060,12 +1060,12 @@
                   <div class="col-span-6 lg:col-span-12 md:col-span-6 sm:col-span-12">
                     <div class="flex items-center gap-3">
                       <label class="text-title text-sm font-medium" for="color">Color</label>
-                      <ul class="flex flex-wrap gap-2 items-center" id="color">
-                        <li class="w-6 h-6 bg-light rounded-full cursor-pointer"></li>
+                      <ul class="flex flex-wrap items-center gap-2" id="color">
+                        <li class="w-6 h-6 rounded-full cursor-pointer bg-light"></li>
                         <li class="w-6 h-6 bg-black rounded-full cursor-pointer"></li>
-                        <li class="w-6 h-6 bg-warning rounded-full cursor-pointer"></li>
-                        <li class="w-6 h-6 bg-danger rounded-full cursor-pointer"></li>
-                        <li class="w-6 h-6 bg-info rounded-full cursor-pointer"></li>
+                        <li class="w-6 h-6 rounded-full cursor-pointer bg-warning"></li>
+                        <li class="w-6 h-6 rounded-full cursor-pointer bg-danger"></li>
+                        <li class="w-6 h-6 rounded-full cursor-pointer bg-info"></li>
                       </ul>
                     </div>
                   </div>
@@ -1112,7 +1112,7 @@
                       <div class="tab-pan fade group relative first:rounded-tl-none rounded-5 border border-border-light !p-4" data-tabContent="2">
                         <p class="text-base text-title font-semibold mb-3">Backy Fashion Women's Leather Bags</p>
                         <p class="text-content3 text-sm">A bag that holds your entire universe! A tote bag is a shoulder bag with parallel handles that might have side panels or not. The exterior is beige and has one main compartment, three total pockets, and a zippered clasp. I use excellent, cruelty-free materials.</p>
-                        <ul class="list-disc mt-3 pl-5"> 
+                        <ul class="pl-5 mt-3 list-disc"> 
                           <li class="text-xs font-medium text-content3">Main zip compartment</li>
                           <li class="text-xs font-medium text-content3">3 total number of pocket</li>
                           <li class="text-xs font-medium text-content3">Made in India </li>
@@ -1122,7 +1122,7 @@
                       </div>
                       <div class="tab-pan fade group relative first:rounded-tl-none rounded-5 border border-border-light !p-4" data-tabContent="3">
                         <div class="flex flex-col gap-0">
-                          <div class="flex flex-col gap-3 p-3 first:border-b first:border-border-light first:border-dashed last:border-none">
+                          <div class="flex flex-col gap-3 p-3 first:border-b last:pb-0 first:border-border-light first:border-dashed last:border-none">
                             <div class="flex items-center justify-between gap-2">
                               <div class="flex items-center gap-0"><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-content stroke-transparent" data-feather="star"></i></div><span class="text-xs text-content3 font-medium">06 Feb, 2023 </span>
                             </div>
@@ -1135,7 +1135,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="flex flex-col gap-3 p-3 first:border-b first:border-border-light first:border-dashed last:border-none">
+                          <div class="flex flex-col gap-3 p-3 first:border-b last:pb-0 first:border-border-light first:border-dashed last:border-none">
                             <div class="flex items-center justify-between gap-2">
                               <div class="flex items-center gap-0"><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i></div><span class="text-xs text-content3 font-medium">24 Jan, 2023 </span>
                             </div>
@@ -1153,7 +1153,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="flex flex-wrap gap-2 items-center capitalize 2lg:gap-1 mt-3"> <a class="btn btn-primary text-white text-sm lg:px-2 lg:text-xs py-2" href="cart.html">Add to cart         </a><a class="btn btn-secondary text-white text-sm lg:px-2 lg:text-xs py-2" href="wishlist.html">Add to wishlist         </a><a class="btn btn-warning text-white text-sm lg:px-2 lg:text-xs py-2" href="checkout.html">Buy it now   </a></div>
+                <div class="flex flex-wrap gap-2 items-center capitalize mt-3 2lg:gap-1"> <a class="btn btn-primary text-white text-sm py-2 lg:px-2 lg:text-xs" href="cart.html">Add to cart         </a><a class="btn btn-secondary text-white text-sm py-2 lg:px-2 lg:text-xs" href="wishlist.html">Add to wishlist         </a><a class="btn btn-warning text-white text-sm py-2 lg:px-2 lg:text-xs" href="checkout.html">Buy it now   </a></div>
               </div>
             </div>
           </div>
