--- a/html/template/widgets.html
+++ b/html/template/widgets.html
@@ -1005,13 +1005,13 @@
             <div class="col-span-8 xl:col-span-12"> 
               <div class="grid grid-cols-2 gap-card-gap">
                 <div class="col-span-1 md:col-span-2">
-                  <div class="card">
+                  <div class="card svg-shake">
                     <div class="grid grid-cols-12">
                       <div class="col-span-7 5xl:col-span-8 2xl:col-span-7 2lg:col-span-8 3sm:col-span-9">
                         <div class="flex items-center gap-[9px]">
                           <div class="p-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relative">
                             <div class="bg-success opacity-25 absolute z-[1] inset-0 rounded-full"> </div>
-                            <svg class="fill-success 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
+                            <svg class="strong-hover-shake fill-success 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
                               <use href="../../../assets/svg/_bold_sprite.svg#User"></use>
                             </svg>
                           </div>
@@ -1035,13 +1035,13 @@
                   </div>
                 </div>
                 <div class="col-span-1 md:col-span-2">
-                  <div class="card">
+                  <div class="card svg-shake">
                     <div class="grid grid-cols-12">
                       <div class="col-span-7 5xl:col-span-8 2xl:col-span-7 2lg:col-span-8 3sm:col-span-9">
                         <div class="flex items-center gap-[9px]">
                           <div class="p-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relative">
                             <div class="bg-title opacity-25 absolute z-[1] inset-0 rounded-full"> </div>
-                            <svg class="fill-title 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
+                            <svg class="strong-hover-shake fill-title 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
                               <use href="../../../assets/svg/_bold_sprite.svg#Like"></use>
                             </svg>
                           </div>
@@ -1065,13 +1065,13 @@
                   </div>
                 </div>
                 <div class="col-span-1 md:col-span-2">
-                  <div class="card">
+                  <div class="card svg-shake">
                     <div class="grid grid-cols-12">
                       <div class="col-span-7 5xl:col-span-8 2xl:col-span-7 2lg:col-span-8 3sm:col-span-9">
                         <div class="flex items-center gap-[9px]">
                           <div class="p-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relative">
                             <div class="bg-secondary opacity-25 absolute z-[1] inset-0 rounded-full"> </div>
-                            <svg class="fill-secondary 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
+                            <svg class="strong-hover-shake fill-secondary 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
                               <use href="../../../assets/svg/_bold_sprite.svg#Bold-Chat"></use>
                             </svg>
                           </div>
@@ -1095,13 +1095,13 @@
                   </div>
                 </div>
                 <div class="col-span-1 md:col-span-2">
-                  <div class="card">
+                  <div class="card svg-shake">
                     <div class="grid grid-cols-12">
                       <div class="col-span-7 5xl:col-span-8 2xl:col-span-7 2lg:col-span-8 3sm:col-span-9">
                         <div class="flex items-center gap-[9px]">
                           <div class="p-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relative">
                             <div class="bg-warning opacity-25 absolute z-[1] inset-0 rounded-full"> </div>
-                            <svg class="fill-warning 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
+                            <svg class="strong-hover-shake fill-warning 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
                               <use href="../../../assets/svg/_bold_sprite.svg#Save"></use>
                             </svg>
                           </div>
@@ -1200,10 +1200,10 @@
                           </div>
                           <div class="avatar-group -space-x-6 justify-center">
                             <div class="avatar w-12 h-12 5xl:w-11 5xl:h-11 border-[2px] border-white hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0">
-                              <div><img src="../../assets/images/avatar/1.jpg" alt="avatar"/></div>
+                              <div class="h-12"><img src="../../assets/images/avatar/1.jpg" alt="avatar"/></div>
                             </div>
                             <div class="avatar w-12 h-12 5xl:w-11 5xl:h-11 border-[2px] border-white hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0">
-                              <div><img src="../../assets/images/avatar/2.jpg" alt="avatar"/></div>
+                              <div class="h-12"><img src="../../assets/images/avatar/2.jpg" alt="avatar"/></div>
                             </div>
                             <div class="avatar placeholder w-12 h-12 5xl:w-11 5xl:h-11 border-[2px] bg-gray-light border-white hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0">
                               <div><span class="text-xs font-bold text-title">26+</span></div>
@@ -1514,9 +1514,6 @@
   <script src="../../assets/js/apexchart/apexcharts.js"></script>
   <script src="../../assets/js/apexchart/apex-common.js"></script>
   <script src="../../assets/js/apexchart/unique-custom.js"></script>
-  <script src="../../assets/js/apexchart/friendly-custom.js"></script>
-  <script src="../../assets/js/apexchart/minimal-custom.js"></script>
-  <script src="../../assets/js/apexchart/material-custom.js"></script>
   <!-- Sidebar Js -->
   <script src="../../assets/js/sidebar.js"></script>
   <!-- customizer js-->
