--- a/assets/postcss/base/_reset.css
+++ b/assets/postcss/base/_reset.css
@@ -167,4 +167,48 @@
       transform: scale(1);
     }
   }
+
+  .svg-shake{
+    &:hover{
+      .strong-hover-shake{
+        animation: tada 1.5s ease infinite;
+      }
+    }
+  }
+
+  @keyframes tada {
+    0% {
+      transform: scaleX(1);
+    }
+    10% {
+        transform: scale3d(0.9, 0.9, 0.9) rotate(-3deg);
+    }
+    20% {
+        transform: scale3d(0.9, 0.9, 0.9) rotate(-3deg);
+    }
+    30% {
+        transform: scale3d(1.1, 1.1, 1.1) rotate(3deg);
+    }
+    50% {
+        transform: scale3d(1.1, 1.1, 1.1) rotate(3deg);
+    }
+    70% {
+        transform: scale3d(1.1, 1.1, 1.1) rotate(3deg);
+    }
+    90% {
+        transform: scale3d(1.1, 1.1, 1.1) rotate(3deg);
+    }
+    40% {
+        transform: scale3d(1.1, 1.1, 1.1) rotate(-3deg);
+    }
+    60% {
+        transform: scale3d(1.1, 1.1, 1.1) rotate(-3deg);
+    }
+    80% {
+        transform: scale3d(1.1, 1.1, 1.1) rotate(-3deg);
+    }
+    100% {
+        transform: scaleX(1);
+    }
+  }
 }
