--- a/assets/postcss/components/_table.css
+++ b/assets/postcss/components/_table.css
@@ -134,6 +134,12 @@
                 &:nth-child(4) {
                   @apply 2md:hidden;
                 }
+                &:first-child{
+                  @apply pl-4;
+                }
+                &:last-child{
+                  @apply pr-4;
+                }
               }
             }
           }
@@ -217,6 +223,23 @@
           tr {
             th {
               @apply pt-unset;
+            }
+          }
+        }
+      }
+    }    
+  }
+  .invoice-table{
+    .table{
+      thead,
+      tbody{
+        tr{
+          th,td{
+            &:first-child{
+              @apply pl-4;
+            }
+            &:last-child{
+              @apply pr-4;
             }
           }
         }
