--- a/assets/pug/layout/email-left-sidebar.pug
+++ b/assets/pug/layout/email-left-sidebar.pug
@@ -15,7 +15,7 @@ div(class="card gap-0 lg:z-10 2xl:p-card-spacing lg:p-3 left-sidebar-aside z-[3]
   label.button-label.btn-primary.flex.gap-2.items-center.justify-center.w-full.text-sm(for='modal-16')
     +SVG_ICON("Message","w-[1.125rem] h-[1.125rem] stroke-white")
     | New Mail
-  div(class="mt-4 bg-gray-light dark:bg-sidebar-dark2 lg:h-full")
+  div(class="mt-4 bg-gray-light dark:bg-sidebar-dark2 lg:h-full lg:overflow-auto")
     ul.flex.flex-col.gap-0
       li.pl-3.pr-2.rounded-5(class="rtl:pl-2 py-[0.6rem] last:mb-4 hover:bg-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark mr-4 first:mt-[20px] hover:rounded-tr-[25px] hover:rounded-br-[25px] rtl:hover:rounded-tr-none rtl:hover:rounded-br-none rtl:hover:rounded-tl-[25px] rtl:hover:rounded-bl-[25px] bg-white rounded-tr-[25px] rounded-br-[25px] rtl:rounded-tr-none rtl:rounded-br-none rtl:rounded-tl-[25px] rtl:rounded-bl-[25px]")
         a(href="javascript:void(0)" class="flex items-center justify-between")
