--- a/assets/pug/mixin/chat-app/element-call.pug
+++ b/assets/pug/mixin/chat-app/element-call.pug
@@ -9,7 +9,7 @@ mixin call-data(type,data)
       li.flex.items-start.justify-between(class="pt-[13px] border-t border-gray-light  dark:border-t dark:border-border-dark first:pt-0 first:mt-0 first:border-none")
         div.flex.items-center.gap-3(class="w-[calc(100%_-_59px)] xl:gap-2")
           div.avatar 
-            div.w-10.rounded-full(class="xl:w-9")
+            div.w-10.rounded-full.h-10(class="xl:w-9 xl:h-9")
               img(src=`../../assets/images/avatar/${dataItem.image}`, alt=`${dataItem.title}`)
           div(class="w-[calc(100%_-_70px)]") 
             h4.text-xs.font-medium.truncate.text-title(class="leading-none lg:text-2xs lg:leading-none")=dataItem.title 
