--- a/assets/pug/mixin/element-social-media.pug
+++ b/assets/pug/mixin/element-social-media.pug
@@ -14,6 +14,6 @@ mixin social-mediadata(data)
 mixin user-social-media(data)
   ul.list-inline.flex.flex-wrap.gap-2
     each dataItem in data
-      li.list-inline-item.bg-gray-light.rounded-full(class="dark:dark:bg-sidebar-dark")
+      li.list-inline-item.bg-gray-light.rounded-full(class="dark:dark:bg-sidebar-dark hover:translate-y-[-4px] hover:transition-all hover:ease translate-y-0")
         a(href=`https://www.${dataItem.name}.com/`)
           img(src=`../../assets/images/social/${dataItem.image}`, alt=`${dataItem.name}`, class="w-6 h-6 p-[6px]")
