--- a/assets/pug/pages/template/blog-grid.pug
+++ b/assets/pug/pages/template/blog-grid.pug
@@ -92,7 +92,7 @@ html(lang='en')
                                  li(class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none")                                 
                                     a.flex.items-center.gap-3(href="blog-grid.html" class="w-[calc(100%_-_0rem)] xl:gap-2")  
                                        div.avatar  
-                                          div.w-10.rounded-full(class="xl:w-9") 
+                                          div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9") 
                                              img(src='../../assets/images/avatar/25.jpg' alt='avatar')
                                        div(class="w-[calc(100%_-_3.125rem)]")
                                           h3.text-xs.font-bold.text-primary(class="leading-none lg:text-2xs") Angela R. Lear
@@ -100,7 +100,7 @@ html(lang='en')
                                  li(class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none")                                 
                                     a.flex.items-center.gap-3(href="blog-grid.html" class="w-[calc(100%_-_0rem)] xl:gap-2")  
                                        div.avatar
-                                          div.w-10.rounded-full(class="xl:w-9")
+                                          div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
                                              img(src='../../assets/images/avatar/15.jpg' alt='avatar')
                                        div(class="w-[calc(100%_-_3.125rem)]")
                                           h3.text-xs.font-bold.text-primary(class="leading-none lg:text-2xs") Marjorie W. Martin
@@ -108,7 +108,7 @@ html(lang='en')
                                  li(class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none")                                 
                                     a.flex.items-center.gap-3(href="blog-grid.html" class="w-[calc(100%_-_0rem)] xl:gap-2")  
                                        div.avatar
-                                          div.w-10.rounded-full(class="xl:w-9")
+                                          div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
                                              img(src='../../assets/images/avatar/6.jpg' alt='avatar')
                                        div(class="w-[calc(100%_-_3.125rem)]")
                                           h3.text-xs.font-bold.text-primary(class="leading-none lg:text-2xs") Russell P. Renfrew
@@ -116,7 +116,7 @@ html(lang='en')
                                  li(class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none")                                 
                                     a.flex.items-center.gap-3(href="blog-grid.html" class="w-[calc(100%_-_0rem)] xl:gap-2")  
                                        div.avatar
-                                          div.w-10.rounded-full(class="xl:w-9")
+                                          div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
                                              img(src='../../assets/images/avatar/27.jpg' alt='avatar')
                                        div(class="w-[calc(100%_-_3.125rem)]")
                                           h3.text-xs.font-bold.text-primary(class="leading-none lg:text-2xs") Kevin A. Ek
@@ -148,7 +148,7 @@ html(lang='en')
                                        div.flex.justify-between.items-center
                                           div.flex.items-start.justify-between.gap-2.items-center(class="pt-[13px] first:pt-0 first:mt-0 first:border-none")  
                                              div.avatar
-                                                div.w-10.rounded-full(class="xl:w-9")
+                                                div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
                                                    img(src='../../assets/images/avatar/20.jpg' alt='avatar')
                                              div
                                                 a(href="blog-grid.html")
@@ -173,7 +173,7 @@ html(lang='en')
                                        div.flex.justify-between.items-center
                                           div.flex.items-start.justify-between.gap-2.items-center(class="pt-[13px] first:pt-0 first:mt-0 first:border-none")
                                              div.avatar 
-                                                div.w-10.rounded-full(class="xl:w-9")
+                                                div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
                                                    img(src='../../assets/images/avatar/21.jpg' alt='avatar')
                                              div
                                                 a(href="blog-grid.html")
@@ -198,7 +198,7 @@ html(lang='en')
                                        div.flex.justify-between.items-center
                                           div.flex.items-start.justify-between.gap-2.items-center(class="pt-[13px] first:pt-0 first:mt-0 first:border-none")
                                              div.avatar 
-                                                div.w-10.rounded-full(class="xl:w-9")
+                                                div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
                                                    img(src='../../assets/images/avatar/38.jpg' alt='avatar')
                                              div
                                                 a(href="blog-grid.html")
@@ -223,7 +223,7 @@ html(lang='en')
                                        div.flex.justify-between.items-center
                                           div.flex.items-start.justify-between.gap-2.items-center(class="pt-[13px] first:pt-0 first:mt-0 first:border-none")
                                              div.avatar 
-                                                div.w-10.rounded-full(class="xl:w-9")
+                                                div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
                                                    img(src='../../assets/images/avatar/20.jpg' alt='avatar')
                                              div
                                                 a(href="blog-grid.html")
@@ -248,7 +248,7 @@ html(lang='en')
                                        div.flex.justify-between.items-center
                                           div.flex.items-start.justify-between.gap-2.items-center(class="pt-[13px] first:pt-0 first:mt-0 first:border-none")
                                              div.avatar 
-                                                div.w-10.rounded-full(class="xl:w-9")
+                                                div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
                                                    img(src='../../assets/images/avatar/21.jpg' alt='avatar')
                                              div
                                                 a(href="blog-grid.html")
@@ -273,7 +273,7 @@ html(lang='en')
                                        div.flex.justify-between.items-center
                                           div.flex.items-start.justify-between.gap-2.items-center(class="pt-[13px] first:pt-0 first:mt-0 first:border-none")
                                              div.avatar 
-                                                div.w-10.rounded-full(class="xl:w-9")
+                                                div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
                                                    img(src='../../assets/images/avatar/38.jpg' alt='avatar')
                                              div
                                                 a(href="blog-grid.html")
@@ -298,7 +298,7 @@ html(lang='en')
                                        div.flex.justify-between.items-center
                                           div.flex.items-start.justify-between.gap-2.items-center(class="pt-[13px] first:pt-0 first:mt-0 first:border-none")
                                              div.avatar 
-                                                div.w-10.rounded-full(class="xl:w-9")
+                                                div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
                                                    img(src='../../assets/images/avatar/20.jpg' alt='avatar')
                                              div
                                                 a(href="blog-grid.html")
@@ -323,7 +323,7 @@ html(lang='en')
                                        div.flex.justify-between.items-center
                                           div.flex.items-start.justify-between.gap-2.items-center(class="pt-[13px] first:pt-0 first:mt-0 first:border-none")
                                              div.avatar 
-                                                div.w-10.rounded-full(class="xl:w-9")
+                                                div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
                                                    img(src='../../assets/images/avatar/21.jpg' alt='avatar')
                                              div
                                                 a(href="blog-grid.html")
@@ -348,7 +348,7 @@ html(lang='en')
                                        div.flex.justify-between.items-center
                                           div.flex.items-start.justify-between.gap-2.items-center(class="pt-[13px] first:pt-0 first:mt-0 first:border-none")
                                              div.avatar 
-                                                div.w-10.rounded-full(class="xl:w-9")
+                                                div.w-10.rounded-full.h-10(class="xl:h-9 xl:w-9")
                                                    img(src='../../assets/images/avatar/38.jpg' alt='avatar')
                                              div
                                                 a(href="blog-grid.html")
