--- a/assets/pug/pages/template/cart.pug
+++ b/assets/pug/pages/template/cart.pug
@@ -41,17 +41,15 @@ html(lang='en')
                   include ../../components/table/cart-table 
             div.col-span-3(class="xl:col-span-4 lg:col-span-12")
               div.card.sticky.top-0 
-                div.card-header
+                div.card-header(class="border-b border-border-light dark:border-sidebar-dark2")
                   h3(class="mb-2 font-bold text-title") Cart Information 
-                  div.divider.w-full  
                 div.card-body.flex.flex-col.gap-2 
-                  div.flex.flex-col.gap-1  
+                  div.flex.flex-col.gap-1(class="pb-4 border-b border-border-light dark:border-sidebar-dark2") 
                     label(for="coupon-code").font-bold.text-xs.text-primary Apply Coupon Code
                     div.flex.items-center.justify-center 
                       input(type="text" placeholder="Enter code" class="p-[11px]" id="coupon-code").w-full.rounded-br-none.rounded-tr-none.border.border-border-light.rounded-5.text-xs.text-content(class="rtl:rounded-br-5 rtl:rounded-bl-none rtl:rounded-tr-5 rtl:rounded-tl-none")
                       span.flex.items-center.justify-center.bg-primary.text-white.rounded-5.border-none.rounded-bl-none.rounded-tl-none.font-medium.text-xs(class="py-[12px] px-[11px] rtl:rounded-bl-5 rtl:rounded-br-none rtl:rounded-tr-none rtl:rounded-tl-5") Apply
-                  div.divider.w-full.my-3 
-                  ul.flex.flex-col.gap-2 
+                  ul.flex.flex-col.gap-2(class="py-1 pb-4 border-b border-border-light dark:border-sidebar-dark2")
                     li.flex.items-center.justify-between.text-content.font-bold
                       h6 Subtotal  
                       h6 $511 
@@ -61,7 +59,6 @@ html(lang='en')
                     li.flex.items-center.justify-between.text-content.font-bold
                       h6 Shipping 
                       h6 $6.90 
-                  div.divider.w-full.my-3 
                   ul.flex.flex-col.gap-2 
                     li.flex.items-center.justify-between.text-primary.font-extrabold 
                       h6 Total(USD) 
