--- a/assets/pug/pages/template/invoice-create.pug
+++ b/assets/pug/pages/template/invoice-create.pug
@@ -36,23 +36,23 @@ html(lang='en')
             div.page-body
                div.grid.grid-cols-12.gap-card-gap
                   div.col-span-12
-                     div.card(class="m-auto max-w-5xl invoice-preview overflow-auto custom-scroll") 
+                     div.card(class="max-w-5xl m-auto overflow-auto invoice-preview custom-scroll") 
                         div.grid.grid-cols-12.gap-card-gap(class="sm:gap-1")
                            div.col-span-4(class="lg:col-span-6 sm:col-span-12")
                               img(src='../../assets/images/logo/logo-dark.png' alt='logo' class="w-20")    
                               div.mt-4 
-                                 form(class="theme-form m-0")
+                                 form(class="m-0 theme-form")
                                     label(for="address") Address 
                                     textarea(placeholder="Enter address" row="3" id="address" class="p-[11px] focus:!border-border-light").w-full.border.border-border-light.rounded-5.text-xs.text-content
                            div.col-span-4(class="lg:col-span-6 lg:hidden")
                            div.col-span-4(class="lg:col-span-6 sm:col-span-12")           
                               div
-                                 form(class="theme-form m-0 flex flex-col gap-2")
+                                 form(class="flex flex-col gap-2 m-0 theme-form")
                                     input(type="text" class="font-medium.text-content3" id="register" placeholder="Registration no.." required)
                                     input(type="email" class="font-medium.text-content3" id="email" placeholder="Email id.." required)
                                     input(type="number" class="font-medium.text-content3" id="contact" placeholder="Contact no.. " required)
                         div.divider(class="w-full bg-gray-light")
-                        form(class="theme-form m-0")
+                        form(class="m-0 theme-form")
                            div.grid.grid-cols-12.gap-card-gap
                               div.col-span-3(class="md:col-span-6 sm:col-span-12 min-w-[120px]")
                                  label(for="number") INVOICE NO
@@ -72,15 +72,15 @@ html(lang='en')
                         div.divider(class="w-full bg-gray-light")
                         div.grid.grid-cols-12.gap-card-gap
                            div.col-span-4(class="lg:col-span-6 sm:col-span-12")
-                              form(class="theme-form m-0 flex flex-col gap-2")
-                                 label(for="address" class="!mb-0") Shipping Address
+                              form(class="flex flex-col gap-2 m-0 theme-form")
+                                 label(for="address" class="!mb-1") Shipping Address
                                  input(type="text" id="name" placeholder="Vilma Gerhold" required)
                                  textarea(placeholder="14300 Gallant Fox Ln, Bowie, Maryland, 20715, US" row="3" id="address" class="p-[11px] focus:!border-border-light").w-full.border.border-border-light.rounded-5.text-xs.text-content
                                  input(type="number" id="name" placeholder="(301) 464-0110" required)
                            div.col-span-4(class="lg:hidden")
                            div.col-span-4(class="lg:col-span-6 sm:col-span-12")
-                              form(class="theme-form m-0 flex flex-col gap-2")
-                                 label(for="address" class="!mb-0") Billing Address
+                              form(class="flex flex-col gap-2 m-0 theme-form")
+                                 label(for="address" class="!mb-1") Billing Address
                                  input(type="text" id="name" placeholder="Vilma Gerhold" required)
                                  textarea(placeholder="14300 Gallant Fox Ln, Bowie, Maryland, 20715, US" row="3" id="address" class="p-[11px] focus:!border-border-light").w-full.border.border-border-light.rounded-5.text-xs.text-content
                                  input(type="number" id="name" placeholder="(301) 464-0110" required)
@@ -96,7 +96,7 @@ html(lang='en')
                               include ../../components/table/checkout-table     
                         div.divider(class="w-full bg-gray-light")
                         div(class="w-[245px] max-w-[300px]")
-                           form(class="theme-form m-0 flex flex-col gap-2")
+                           form(class="flex flex-col gap-2 m-0 theme-form")
                               label(for="address" class="!mb-0") Payment Detail
                               select.form-select.block.w-full.px-3.text-xs.font-normal.text-content3.bg-white.bg-clip-padding.bg-no-repeat.border.border-border-light.rounded-5.transition.ease-in-out.m-0(class='min-w-[150px] py-[9px]' id="paymentMethod" aria-label='Default select example')
                                  option(selected='') Payment Method
@@ -106,9 +106,9 @@ html(lang='en')
                                  option(value='4') Visa
                               input(type="text" id="card-name" placeholder="Vilma Gerhold" required)
                               input(type="number" id="name" placeholder="xxx xxxx xxxx 7159" required)
-                              input(type="number" id="name" placeholder="$787.6" readonly)
+                              input(type="number" id="name" placeholder="$787.6")
                         div.divider(class="w-full bg-gray-light")
-                        form(class="theme-form m-0 flex flex-col gap-2")
+                        form(class="flex flex-col gap-2 m-0 theme-form")
                            label(for="notes") Notes
                            p.font-medium.text-content3(class="!text-left rtl:!text-right") All accounts must be settled within seven days of receiving an invoice. to be paid by check, credit card, or online direct deposit. If the account is not paid within seven days, the agreed-upon quoted fee indicated above will be charged to the credits details provided as confirmation of the task completed.
                         div.divider(class="w-full bg-gray-light")
