--- a/assets/pug/pages/template/kanban-board.pug
+++ b/assets/pug/pages/template/kanban-board.pug
@@ -58,7 +58,7 @@ html(lang='en')
                //-   div.col-span-12 
                //-     div.card  
                //-       div.card-header   
-               //-         h3(class="font-bold text-title mb-3") Custom Board
+               //-         h3(class="mb-3 font-bold text-title") Custom Board
                //-         .divider.w-full      
                //-       div.card-body  
                //-         div.grid.grid-cols-12.gap-3 
@@ -67,7 +67,7 @@ html(lang='en')
                //-           each data in KANBAN_BOARD_CARD
                //-              +kanban-board-card(data) 
 
-               // Page Body End
-               +footer("sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap")
+            // Page Body End
+            +footer("sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap")
          include ../../components/customizer   
    include ../../layout/footer-files
