--- a/assets/pug/pages/template/product.pug
+++ b/assets/pug/pages/template/product.pug
@@ -75,12 +75,12 @@ html(lang='en')
             div.col-span-8(class="xl:col-span-7 md:col-span-12")
               div 
                 div.flex.items-center.gap-2.justify-between
-                  h3.leading-none(class="font-semibold 3xl:flex 3xl:justify-between 3xl:items-center text-title mb-3") Women's Latest Bags Collections
-                  a(href="add-product.html" class="btn bg-gray-light dark:bg-sidebar-dark2 p-2")
-                    i(data-feather="plus" class="w-4 h-4 stroke-title")
+                  h3.leading-none(class="mb-3 font-semibold 3xl:flex 3xl:justify-between 3xl:items-center text-title sm:text-base") Women's Latest Bags Collections
+                  a(href="add-product.html" class="p-2 btn hover:dark:bg-sidebar-dark2 hover:bg-gray-light")
+                    i(data-feather="plus" class="w-4 h-4 scale-100 stroke-title")
                 div.flex.items-center.gap-3.mb-3.flex-wrap
-                  span.text-content3.text-xs.leading-none(class="border-r border-border-light rtl:border-r-0 rtl:border-l rtl:pr-unset rtl:pl-3 pr-3") #15704 
-                  p.text-title.text-xs.leading-none.font-semibold(class="border-r border-border-light rtl:border-r-0 rtl:border-l rtl:pr-unset rtl:pl-3 pr-3") 
+                  span.text-content3.text-xs.leading-none(class="pr-3 border-r border-border-light rtl:border-r-0 rtl:border-l rtl:pr-unset rtl:pl-3") #15704 
+                  p.text-title.text-xs.leading-none.font-semibold(class="pr-3 border-r border-border-light rtl:border-r-0 rtl:border-l rtl:pr-unset rtl:pl-3") 
                     span.text-content3.text-xs.leading-none Seller: 
                     | Backy Fashion              
                   p.text-title.text-xs.leading-none.font-semibold
@@ -94,7 +94,7 @@ html(lang='en')
                     i(data-feather="star" class="w-4 h-4 fill-warning stroke-transparent")
                     i(data-feather="star" class="w-4 h-4 fill-content stroke-transparent")
                   label(for="4above").text-content3.text-xs.font-semibold 1059 ratings
-                h4(class="font-semibold text-title lg:text-lg my-2") $500 
+                h4(class="my-2 font-semibold text-title lg:text-lg") $500 
                   del(class="text-danger") $350 
                 div.divider.w-full.my-4(class="before:!bg-border-light after:!bg-border-light 2lg:my-3")
                 div.grid.grid-cols-12.gap-card-gap.items-center 
@@ -109,12 +109,12 @@ html(lang='en')
                   div.col-span-6(class="lg:col-span-12 md:col-span-6 sm:col-span-12")
                     div.flex.items-center.gap-3
                       label.text-title.text-sm.font-medium(for="color") Color
-                      ul(class="flex flex-wrap gap-2 items-center" id="color")
-                        li(class="w-6 h-6 bg-light rounded-full cursor-pointer")
+                      ul(class="flex flex-wrap items-center gap-2" id="color")
+                        li(class="w-6 h-6 rounded-full cursor-pointer bg-light")
                         li(class="w-6 h-6 bg-black rounded-full cursor-pointer")
-                        li(class="w-6 h-6 bg-warning rounded-full cursor-pointer")
-                        li(class="w-6 h-6 bg-danger rounded-full cursor-pointer")
-                        li(class="w-6 h-6 bg-info rounded-full cursor-pointer")
+                        li(class="w-6 h-6 rounded-full cursor-pointer bg-warning")
+                        li(class="w-6 h-6 rounded-full cursor-pointer bg-danger")
+                        li(class="w-6 h-6 rounded-full cursor-pointer bg-info")
                 div.divider.w-full.my-4(class="before:!bg-border-light after:!bg-border-light 2lg:my-3")      
                 div
                   h6.text-title.font-medium Description: 
@@ -134,7 +134,7 @@ html(lang='en')
                       div(data-tabContent="2" class="tab-pan fade group relative first:rounded-tl-none rounded-5 border border-border-light !p-4")
                         p.text-base.text-title.font-semibold.mb-3 Backy Fashion Women's Leather Bags
                         p.text-content3.text-sm A bag that holds your entire universe! A tote bag is a shoulder bag with parallel handles that might have side panels or not. The exterior is beige and has one main compartment, three total pockets, and a zippered clasp. I use excellent, cruelty-free materials.
-                        ul(class="list-disc mt-3 pl-5") 
+                        ul(class="pl-5 mt-3 list-disc") 
                           li.text-xs.font-medium.text-content3 Main zip compartment
                           li.text-xs.font-medium.text-content3 3 total number of pocket
                           li.text-xs.font-medium.text-content3 Made in India 
@@ -142,7 +142,7 @@ html(lang='en')
                           li.text-xs.font-medium.text-content3 6 months warranty
                       div(data-tabContent="3" class="tab-pan fade group relative first:rounded-tl-none rounded-5 border border-border-light !p-4")
                         div.flex.flex-col.gap-0
-                          div.flex.flex-col.gap-3.p-3(class="first:border-b first:border-border-light first:border-dashed last:border-none")
+                          div.flex.flex-col.gap-3.p-3(class="first:border-b last:pb-0 first:border-border-light first:border-dashed last:border-none")
                             div.flex.items-center.justify-between.gap-2
                               div.flex.items-center.gap-0
                                 i(data-feather="star" class="w-4 h-4 fill-warning stroke-transparent")
@@ -158,7 +158,7 @@ html(lang='en')
                               div
                                 h4(class="text-xs font-semibold text-title") Kitten
                                 span(class="block mt-1 font-semibold text-2xs text-content") California, US
-                          div.flex.flex-col.gap-3.p-3(class="first:border-b first:border-border-light first:border-dashed last:border-none")
+                          div.flex.flex-col.gap-3.p-3(class="first:border-b last:pb-0 first:border-border-light first:border-dashed last:border-none")
                             div.flex.items-center.justify-between.gap-2
                               div.flex.items-center.gap-0
                                 i(data-feather="star" class="w-4 h-4 fill-warning stroke-transparent")
@@ -174,10 +174,10 @@ html(lang='en')
                               div
                                 h4(class="text-xs font-semibold text-title") Mary John
                                 span(class="block mt-1 font-semibold text-2xs text-content") British Columbia, Canada
-                div.flex.flex-wrap.gap-2.items-center.capitalize(class="2lg:gap-1 mt-3") 
-                  a(href="cart.html").btn.btn-primary.text-white.text-sm(class="lg:px-2 lg:text-xs py-2") Add to cart         
-                  a(href="wishlist.html").btn.btn-secondary.text-white.text-sm(class="lg:px-2 lg:text-xs py-2") Add to wishlist         
-                  a(href="checkout.html").btn.btn-warning.text-white.text-sm(class="lg:px-2 lg:text-xs py-2") Buy it now   
+                div.flex.flex-wrap.gap-2.items-center.capitalize(class="mt-3 2lg:gap-1") 
+                  a(href="cart.html").btn.btn-primary.text-white.text-sm(class="py-2 lg:px-2 lg:text-xs") Add to cart         
+                  a(href="wishlist.html").btn.btn-secondary.text-white.text-sm(class="py-2 lg:px-2 lg:text-xs") Add to wishlist         
+                  a(href="checkout.html").btn.btn-warning.text-white.text-sm(class="py-2 lg:px-2 lg:text-xs") Buy it now   
 
 
         // Page Body End  
