--- a/assets/pug/pages/template/shop.pug
+++ b/assets/pug/pages/template/shop.pug
@@ -55,7 +55,7 @@ html(lang='en')
 
                   div.col-span-12.flex.items-center.justify-between.gap-3.bg-white.p-3.rounded-5(class="2sm:flex-col") 
                      div.flex.items-center.gap-3
-                        label(for="sortby" class="min-w-max text-xs text-content3") Sort By                                    
+                        label(for="sortby" class="text-xs min-w-max text-content3") Sort By                                    
                         select.form-select.block.w-full.px-3.text-xs.font-normal.text-content3.bg-white.bg-clip-padding.bg-no-repeat.border.border-border-light.rounded-5.transition.ease-in-out.m-0(class='min-w-[150px] py-[9px]' id="sortby" aria-label='Default select example')
                            option(selected='') All
                            option(value='1') Popular
@@ -75,7 +75,7 @@ html(lang='en')
                         div.card-header 
                            div.flex.items-center.justify-between(class="w-full") 
                               h2(class="font-bold text-title") Filters
-                              button(class="p-1 rounded-full sm:p-1 shop-close-sidebar hidden xl:block")
+                              button(class="hidden p-1 rounded-full sm:p-1 shop-close-sidebar xl:block")
                                  i(class="w-4 h-4" data-feather="x")
                         div.card-body.flex.flex-col.gap-1
                            div.flex.flex-col.flex-wrap.gap-2
@@ -249,7 +249,7 @@ html(lang='en')
 
                            div.flex.flex-col
                               h4.bg-primary.text-white.text-sm.p-3.w-full.cursor-pointer.rounded.font-bold(class="rounded-tr-[0.25rem] rounded-tl-[0.25rem] rounded-br-none rounded-bl-none") New Product
-                              div(class="block w-full p-3 mb-2 border-2 bg-white-light border-primary-light")
+                              div(class="block w-full p-3 border-2 bg-white-light border-primary-light")
                                  +new-product-card(NEW_PRODUCT)
 
                   div.col-span-9(class="xl:col-span-12 product-wrapper-grid")
@@ -304,10 +304,10 @@ html(lang='en')
                               i.fa-solid.fa-share(class="w-4 h-4 text-content")
                            div.flex.gap-2.items-center 
                               label(for='productmodal') 
-                                 i(data-feather="x" class="w-4 h-4 stroke-dark cursor-pointer")
+                                 i(data-feather="x" class="w-4 h-4 cursor-pointer stroke-dark")
                         span.text-content3.text-xs.leading-none #15704                  
                         p.text-content3.text-xs.leading-none Currently in stock    
-                        h4(class="font-semibold text-title lg:text-lg my-2") $500 
+                        h4(class="my-2 font-semibold text-title lg:text-lg") $500 
                            del(class="text-danger") $350 
                         div.flex.items-center.gap-2
                            div.flex.items-center.gap-0
@@ -323,12 +323,12 @@ html(lang='en')
                            div.col-span-6(class="2lg:col-span-7 2sm:col-span-12")
                               div.flex.items-center.gap-3
                                  label.text-title.text-sm.font-medium(for="color") Color
-                                 ul(class="flex flex-wrap gap-1 items-center" id="color")
-                                    li(class="w-5 h-5 bg-light rounded-full cursor-pointer")
+                                 ul(class="flex flex-wrap items-center gap-1" id="color")
+                                    li(class="w-5 h-5 rounded-full cursor-pointer bg-light")
                                     li(class="w-5 h-5 bg-black rounded-full cursor-pointer")
-                                    li(class="w-5 h-5 bg-warning rounded-full cursor-pointer")
-                                    li(class="w-5 h-5 bg-danger rounded-full cursor-pointer")
-                                    li(class="w-5 h-5 bg-info rounded-full cursor-pointer")
+                                    li(class="w-5 h-5 rounded-full cursor-pointer bg-warning")
+                                    li(class="w-5 h-5 rounded-full cursor-pointer bg-danger")
+                                    li(class="w-5 h-5 rounded-full cursor-pointer bg-info")
                            div.col-span-6(class="2lg:col-span-5 2sm:col-span-12")
                               div.flex.items-center.gap-3
                                  label.text-title.text-sm.font-medium(for="qty") Qty   
