--- a/html/template/blog-detail.html
+++ b/html/template/blog-detail.html
@@ -1043,28 +1043,28 @@
                     <ul class="flex flex-col gap-1"> 
                       <li class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none">                                <a class="flex items-center gap-3 w-[calc(100%_-_0rem)] xl:gap-2" href="blog-grid.html"> 
                           <div class="avatar"> 
-                            <div class="w-10 rounded-full xl:w-9"> <img src="../../assets/images/avatar/25.jpg" alt="avatar"></div>
+                            <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"> <img src="../../assets/images/avatar/25.jpg" alt="avatar"></div>
                           </div>
                           <div class="w-[calc(100%_-_3.125rem)]">
                             <h3 class="text-xs font-bold text-primary leading-none lg:text-2xs">Angela R. Lear</h3><span class="text-content mt-1 line-clamp-1">War taught me that not everything is glamorous.</span>
                           </div></a></li>
                       <li class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none">                                <a class="flex items-center gap-3 w-[calc(100%_-_0rem)] xl:gap-2" href="blog-grid.html"> 
                           <div class="avatar">
-                            <div class="w-10 rounded-full xl:w-9"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
+                            <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
                           </div>
                           <div class="w-[calc(100%_-_3.125rem)]">
                             <h3 class="text-xs font-bold text-primary leading-none lg:text-2xs">Marjorie W. Martin</h3><span class="text-content mt-1 line-clamp-1">My aim is to make the poor look rich and the rich look poor.</span>
                           </div></a></li>
                       <li class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none">                                <a class="flex items-center gap-3 w-[calc(100%_-_0rem)] xl:gap-2" href="blog-grid.html"> 
                           <div class="avatar">
-                            <div class="w-10 rounded-full xl:w-9"><img src="../../assets/images/avatar/6.jpg" alt="avatar"></div>
+                            <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/6.jpg" alt="avatar"></div>
                           </div>
                           <div class="w-[calc(100%_-_3.125rem)]">
                             <h3 class="text-xs font-bold text-primary leading-none lg:text-2xs">Russell P. Renfrew</h3><span class="text-content mt-1 line-clamp-1">I think it would rob her of something.  </span>
                           </div></a></li>
                       <li class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none">                                <a class="flex items-center gap-3 w-[calc(100%_-_0rem)] xl:gap-2" href="blog-grid.html"> 
                           <div class="avatar">
-                            <div class="w-10 rounded-full xl:w-9"><img src="../../assets/images/avatar/27.jpg" alt="avatar"></div>
+                            <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/27.jpg" alt="avatar"></div>
                           </div>
                           <div class="w-[calc(100%_-_3.125rem)]">
                             <h3 class="text-xs font-bold text-primary leading-none lg:text-2xs">Kevin A. Ek</h3><span class="text-content mt-1 line-clamp-1">My aim is to make the poor look rich and the rich look poor.  </span>
@@ -1101,7 +1101,7 @@
                       <div class="divider w-full"></div>
                       <div class="flex items-center justify-between  pt-[.8125rem] sm:flex-col sm:items-start"> 
                         <div class="flex items-center gap-3 w-[calc(100%_-_0rem)] xl:gap-2"><a class="avatar" href="blog-grid.html">
-                            <div class="w-10 rounded-full xl:w-9"><img src="../../assets/images/avatar/17.jpg" alt="avatar"></div></a>
+                            <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/17.jpg" alt="avatar"></div></a>
                           <div class="w-[calc(100%_-_3.125rem)]">
                             <h3 class="text-xs font-bold text-primary leading-none lg:text-2xs">Rita Sines</h3><span class="text-content block mt-1 sm:line-clamp-1">War taught me that not everything is glamorous.</span>
                           </div>
@@ -1118,7 +1118,7 @@
                       <div class="flex flex-col justify-center">
                         <div class="pt-[1rem] first:pt-0 first:mt-0 first:border-none">                                
                           <div class="flex items-start gap-3 w-[calc(100%_-_0rem)] xl:gap-2"> <a class="avatar" href="blog-grid.html">
-                              <div class="w-10 rounded-full xl:w-9"><img src="../../assets/images/avatar/33.jpg" alt="avatar"></div></a>
+                              <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/33.jpg" alt="avatar"></div></a>
                             <div class="w-[calc(100%_-_3.125rem)]">
                               <div class="flex items-center justify-between gap-2 sm:flex-col sm:gap-0 sm:items-start">
                                 <h3 class="text-xs font-bold text-primary leading-none lg:text-2xs lg:leading-none">Annie A. McKinney</h3><span class="text-[.75rem] text-xs text-content">1 hours ago</span>
@@ -1130,7 +1130,7 @@
                         <div class="mt-3 divider"></div>
                         <div class="pt-[1rem] ml-[3.125rem] sm:ml-unset first:pt-0 first:mt-0 first:border-none">                                
                           <div class="flex items-start gap-3 w-[calc(100%_-_0rem)] xl:gap-2"> <a class="avatar" href="blog-grid.html">
-                              <div class="w-10 rounded-full xl:w-9"><img src="../../assets/images/avatar/26.jpg" alt="avatar"></div></a>
+                              <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/26.jpg" alt="avatar"></div></a>
                             <div class="w-[calc(100%_-_3.125rem)]">
                               <div class="flex items-center justify-between gap-2 sm:flex-col sm:gap-0 sm:items-start">
                                 <h3 class="text-xs font-bold text-primary leading-none lg:text-2xs lg:leading-none">Jim P. Jackson</h3><span class="text-[.75rem] text-xs text-content">2 months ago</span>
@@ -1142,7 +1142,7 @@
                         <div class="mt-3 divider"></div>
                         <div class="pt-[1rem] first:pt-0 first:mt-0 first:border-none">                  
                           <div class="flex items-start gap-3 w-[calc(100%_-_0rem)] xl:gap-2"> <a class="avatar" href="blog-grid.html">
-                              <div class="w-10 rounded-full xl:w-9"><img src="../../assets/images/avatar/28.jpg" alt="avatar"></div></a>
+                              <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/28.jpg" alt="avatar"></div></a>
                             <div class="w-[calc(100%_-_3.125rem)]">
                               <div class="flex items-center justify-between gap-2 sm:flex-col sm:gap-0 sm:items-start">
                                 <h3 class="text-xs font-bold text-primary leading-none lg:text-2xs lg:leading-none">Tonya D. Harris</h3><span class="text-[.75rem] text-xs text-content">3 days ago</span>
