--- a/html/template/blog-grid.html
+++ b/html/template/blog-grid.html
@@ -1043,28 +1043,28 @@
                     <ul class="flex flex-col gap-1"> 
                       <li class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none">                                <a class="flex items-center gap-3 w-[calc(100%_-_0rem)] xl:gap-2" href="blog-grid.html"> 
                           <div class="avatar"> 
-                            <div class="w-10 rounded-full xl:w-9"> <img src="../../assets/images/avatar/25.jpg" alt="avatar"></div>
+                            <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"> <img src="../../assets/images/avatar/25.jpg" alt="avatar"></div>
                           </div>
                           <div class="w-[calc(100%_-_3.125rem)]">
                             <h3 class="text-xs font-bold text-primary leading-none lg:text-2xs">Angela R. Lear</h3><span class="text-content mt-1 line-clamp-1">War taught me that not everything is glamorous.</span>
                           </div></a></li>
                       <li class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none">                                <a class="flex items-center gap-3 w-[calc(100%_-_0rem)] xl:gap-2" href="blog-grid.html"> 
                           <div class="avatar">
-                            <div class="w-10 rounded-full xl:w-9"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
+                            <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
                           </div>
                           <div class="w-[calc(100%_-_3.125rem)]">
                             <h3 class="text-xs font-bold text-primary leading-none lg:text-2xs">Marjorie W. Martin</h3><span class="text-content mt-1 line-clamp-1">My aim is to make the poor look rich and the rich look poor.</span>
                           </div></a></li>
                       <li class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none">                                <a class="flex items-center gap-3 w-[calc(100%_-_0rem)] xl:gap-2" href="blog-grid.html"> 
                           <div class="avatar">
-                            <div class="w-10 rounded-full xl:w-9"><img src="../../assets/images/avatar/6.jpg" alt="avatar"></div>
+                            <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/6.jpg" alt="avatar"></div>
                           </div>
                           <div class="w-[calc(100%_-_3.125rem)]">
                             <h3 class="text-xs font-bold text-primary leading-none lg:text-2xs">Russell P. Renfrew</h3><span class="text-content mt-1 line-clamp-1">I think it would rob her of something.  </span>
                           </div></a></li>
                       <li class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none">                                <a class="flex items-center gap-3 w-[calc(100%_-_0rem)] xl:gap-2" href="blog-grid.html"> 
                           <div class="avatar">
-                            <div class="w-10 rounded-full xl:w-9"><img src="../../assets/images/avatar/27.jpg" alt="avatar"></div>
+                            <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/27.jpg" alt="avatar"></div>
                           </div>
                           <div class="w-[calc(100%_-_3.125rem)]">
                             <h3 class="text-xs font-bold text-primary leading-none lg:text-2xs">Kevin A. Ek</h3><span class="text-content mt-1 line-clamp-1">My aim is to make the poor look rich and the rich look poor.  </span>
@@ -1103,7 +1103,7 @@
                           <div class="flex justify-between items-center">
                             <div class="flex items-start justify-between gap-2 items-center pt-[13px] first:pt-0 first:mt-0 first:border-none"> 
                               <div class="avatar">
-                                <div class="w-10 rounded-full xl:w-9"><img src="../../assets/images/avatar/20.jpg" alt="avatar"></div>
+                                <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/20.jpg" alt="avatar"></div>
                               </div>
                               <div><a href="blog-grid.html">
                                   <p class="text-title font-bold">Mitchel P. Lawyer</p></a><span class="text-content">Feb 6,2023</span></div>
@@ -1128,7 +1128,7 @@
                           <div class="flex justify-between items-center">
                             <div class="flex items-start justify-between gap-2 items-center pt-[13px] first:pt-0 first:mt-0 first:border-none">
                               <div class="avatar"> 
-                                <div class="w-10 rounded-full xl:w-9"><img src="../../assets/images/avatar/21.jpg" alt="avatar"></div>
+                                <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/21.jpg" alt="avatar"></div>
                               </div>
                               <div><a href="blog-grid.html">
                                   <p class="text-title font-bold">Amy A. Servants</p></a><span class="text-content">Feb 2,2023</span></div>
@@ -1153,7 +1153,7 @@
                           <div class="flex justify-between items-center">
                             <div class="flex items-start justify-between gap-2 items-center pt-[13px] first:pt-0 first:mt-0 first:border-none">
                               <div class="avatar"> 
-                                <div class="w-10 rounded-full xl:w-9"><img src="../../assets/images/avatar/38.jpg" alt="avatar"></div>
+                                <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/38.jpg" alt="avatar"></div>
                               </div>
                               <div><a href="blog-grid.html">
                                   <p class="text-title font-bold">Keith K. Levitt </p></a><span class="text-content">Jan 30,2023</span></div>
@@ -1178,7 +1178,7 @@
                           <div class="flex justify-between items-center">
                             <div class="flex items-start justify-between gap-2 items-center pt-[13px] first:pt-0 first:mt-0 first:border-none">
                               <div class="avatar"> 
-                                <div class="w-10 rounded-full xl:w-9"><img src="../../assets/images/avatar/20.jpg" alt="avatar"></div>
+                                <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/20.jpg" alt="avatar"></div>
                               </div>
                               <div><a href="blog-grid.html">
                                   <p class="text-title font-bold">Mitchel P. Lawyer  </p></a><span class="text-content">Jan 25,2023  </span></div>
@@ -1203,7 +1203,7 @@
                           <div class="flex justify-between items-center">
                             <div class="flex items-start justify-between gap-2 items-center pt-[13px] first:pt-0 first:mt-0 first:border-none">
                               <div class="avatar"> 
-                                <div class="w-10 rounded-full xl:w-9"><img src="../../assets/images/avatar/21.jpg" alt="avatar"></div>
+                                <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/21.jpg" alt="avatar"></div>
                               </div>
                               <div><a href="blog-grid.html">
                                   <p class="text-title font-bold">Katherine W. McWilliams  </p></a><span class="text-content">Jan 5,2023</span></div>
@@ -1228,7 +1228,7 @@
                           <div class="flex justify-between items-center">
                             <div class="flex items-start justify-between gap-2 items-center pt-[13px] first:pt-0 first:mt-0 first:border-none">
                               <div class="avatar"> 
-                                <div class="w-10 rounded-full xl:w-9"><img src="../../assets/images/avatar/38.jpg" alt="avatar"></div>
+                                <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/38.jpg" alt="avatar"></div>
                               </div>
                               <div><a href="blog-grid.html">
                                   <p class="text-title font-bold">Mitchel P. Lawyer  </p></a><span class="text-content">Jan 1,2023</span></div>
@@ -1253,7 +1253,7 @@
                           <div class="flex justify-between items-center">
                             <div class="flex items-start justify-between gap-2 items-center pt-[13px] first:pt-0 first:mt-0 first:border-none">
                               <div class="avatar"> 
-                                <div class="w-10 rounded-full xl:w-9"><img src="../../assets/images/avatar/20.jpg" alt="avatar"></div>
+                                <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/20.jpg" alt="avatar"></div>
                               </div>
                               <div><a href="blog-grid.html">
                                   <p class="text-title font-bold">Anna G. Proas  </p></a><span class="text-content">Dec 31, 2022</span></div>
@@ -1278,7 +1278,7 @@
                           <div class="flex justify-between items-center">
                             <div class="flex items-start justify-between gap-2 items-center pt-[13px] first:pt-0 first:mt-0 first:border-none">
                               <div class="avatar"> 
-                                <div class="w-10 rounded-full xl:w-9"><img src="../../assets/images/avatar/21.jpg" alt="avatar"></div>
+                                <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/21.jpg" alt="avatar"></div>
                               </div>
                               <div><a href="blog-grid.html">
                                   <p class="text-title font-bold">Ronald M. Spelean  </p></a><span class="text-content">Dec 27, 2022 </span></div>
@@ -1303,7 +1303,7 @@
                           <div class="flex justify-between items-center">
                             <div class="flex items-start justify-between gap-2 items-center pt-[13px] first:pt-0 first:mt-0 first:border-none">
                               <div class="avatar"> 
-                                <div class="w-10 rounded-full xl:w-9"><img src="../../assets/images/avatar/38.jpg" alt="avatar"></div>
+                                <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/38.jpg" alt="avatar"></div>
                               </div>
                               <div><a href="blog-grid.html">
                                   <p class="text-title font-bold">Shannon T. Clemons    </p></a><span class="text-content">Dec 5, 2022</span></div>
