--- a/html/template/index.html
+++ b/html/template/index.html
@@ -1190,10 +1190,10 @@
                           </div>
                           <div class="avatar-group -space-x-6 justify-center">
                             <div class="avatar w-12 h-12 5xl:w-11 5xl:h-11 border-[2px] border-white hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0">
-                              <div><img src="../../assets/images/avatar/1.jpg" alt="avatar"/></div>
+                              <div class="h-12"><img src="../../assets/images/avatar/1.jpg" alt="avatar"/></div>
                             </div>
                             <div class="avatar w-12 h-12 5xl:w-11 5xl:h-11 border-[2px] border-white hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0">
-                              <div><img src="../../assets/images/avatar/2.jpg" alt="avatar"/></div>
+                              <div class="h-12"><img src="../../assets/images/avatar/2.jpg" alt="avatar"/></div>
                             </div>
                             <div class="avatar placeholder w-12 h-12 5xl:w-11 5xl:h-11 border-[2px] bg-gray-light border-white hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0">
                               <div><span class="text-xs font-bold text-title">26+</span></div>
@@ -1622,7 +1622,7 @@
                       <div class="flex items-center gap-[10px] flex-[1_1_0]">
                         <div class="rounded-5 overflow-hidden w-[60px] 5xl:w-[59px] lg:w-[51px] 2sm:w-[48px]"><img class="w-full h-auto object-cover" src="../../assets/images/news/1.jpg" alt="event"/></div>
                         <div class="flex-1"> <a href="blog.html">
-                            <h4 class="transition-all text-xs text-title font-semibold line-clamp-1 group-hover:text-primary">Google project apply reviwe</h4></a><span class="text-2xs font-semibold text-content line-clamp-1 mt-[4px]">Today’s news headlines..</span>
+                            <h4 class="transition-all text-xs font-semibold text-title line-clamp-1 group-hover:text-primary">Google project apply reviwe</h4></a><span class="text-2xs font-semibold text-content line-clamp-1 mt-[4px]">Today’s news headlines..</span>
                         </div>
                       </div><span class="min-w-fit badge bg-gray-light text-3xs text-title py-[7px] px-[13px]">2hr ago</span>
                     </li>
@@ -1630,7 +1630,7 @@
                       <div class="flex items-center gap-[10px] flex-[1_1_0]">
                         <div class="rounded-5 overflow-hidden w-[60px] 5xl:w-[59px] lg:w-[51px] 2sm:w-[48px]"><img class="w-full h-auto object-cover" src="../../assets/images/news/2.jpg" alt="event"/></div>
                         <div class="flex-1"> <a href="blog.html">
-                            <h4 class="transition-all text-xs text-title font-semibold line-clamp-1 group-hover:text-primary">Business logo create</h4></a><span class="text-2xs font-semibold text-content line-clamp-1 mt-[4px]">check out the latest...</span>
+                            <h4 class="transition-all text-xs font-semibold text-title line-clamp-1 group-hover:text-primary">Business logo create</h4></a><span class="text-2xs font-semibold text-content line-clamp-1 mt-[4px]">check out the latest...</span>
                         </div>
                       </div><span class="min-w-fit badge bg-gray-light text-3xs text-title py-[7px] px-[13px]">4hr ago</span>
                     </li>
@@ -1638,7 +1638,7 @@
                       <div class="flex items-center gap-[10px] flex-[1_1_0]">
                         <div class="rounded-5 overflow-hidden w-[60px] 5xl:w-[59px] lg:w-[51px] 2sm:w-[48px]"><img class="w-full h-auto object-cover" src="../../assets/images/news/3.jpg" alt="event"/></div>
                         <div class="flex-1"> <a href="blog.html">
-                            <h4 class="transition-all text-xs text-title font-semibold line-clamp-1 group-hover:text-primary">Business project research</h4></a><span class="text-2xs font-semibold text-content line-clamp-1 mt-[4px]">News in english: get...</span>
+                            <h4 class="transition-all text-xs font-semibold text-title line-clamp-1 group-hover:text-primary">Business project research</h4></a><span class="text-2xs font-semibold text-content line-clamp-1 mt-[4px]">News in english: get...</span>
                         </div>
                       </div><span class="min-w-fit badge bg-gray-light text-3xs text-title py-[7px] px-[13px]">10 Jun</span>
                     </li>
@@ -1646,7 +1646,7 @@
                       <div class="flex items-center gap-[10px] flex-[1_1_0]">
                         <div class="rounded-5 overflow-hidden w-[60px] 5xl:w-[59px] lg:w-[51px] 2sm:w-[48px]"><img class="w-full h-auto object-cover" src="../../assets/images/news/4.jpg" alt="event"/></div>
                         <div class="flex-1"> <a href="blog.html">
-                            <h4 class="transition-all text-xs text-title font-semibold line-clamp-1 group-hover:text-primary">Recruitment in it Department</h4></a><span class="text-2xs font-semibold text-content line-clamp-1 mt-[4px]">Technology and...</span>
+                            <h4 class="transition-all text-xs font-semibold text-title line-clamp-1 group-hover:text-primary">Recruitment in it Department</h4></a><span class="text-2xs font-semibold text-content line-clamp-1 mt-[4px]">Technology and...</span>
                         </div>
                       </div><span class="min-w-fit badge bg-gray-light text-3xs text-title py-[7px] px-[13px]">22 Jun</span>
                     </li>
@@ -1654,7 +1654,7 @@
                       <div class="flex items-center gap-[10px] flex-[1_1_0]">
                         <div class="rounded-5 overflow-hidden w-[60px] 5xl:w-[59px] lg:w-[51px] 2sm:w-[48px]"><img class="w-full h-auto object-cover" src="../../assets/images/news/5.jpg" alt="event"/></div>
                         <div class="flex-1"> <a href="blog.html">
-                            <h4 class="transition-all text-xs text-title font-semibold line-clamp-1 group-hover:text-primary">Business project research</h4></a><span class="text-2xs font-semibold text-content line-clamp-1 mt-[4px]">Contributions private...</span>
+                            <h4 class="transition-all text-xs font-semibold text-title line-clamp-1 group-hover:text-primary">Business project research</h4></a><span class="text-2xs font-semibold text-content line-clamp-1 mt-[4px]">Contributions private...</span>
                         </div>
                       </div><span class="min-w-fit badge bg-gray-light text-3xs text-title py-[7px] px-[13px]">10 July</span>
                     </li>
@@ -1892,45 +1892,45 @@
                     </div>
                   </div>
                 </div>
-                <div class="card-body">
+                <div class="card-body"> 
                   <ul> 
                     <li class="group flex items-center group justify-between gap-3 first:pt-0 last:pb-0 first:border-none py-[13px] border-t border-border-light"> 
                       <div class="flex items-center gap-[10px] flex-[1_1_0]">
-                        <div class="overflow-hidden rounded-full object-cover sm:min-w-[38px] sm:min-h-[38px] 5xl:min-w-[42px] 5xl:min-h-[42px] min-w-[45px] min-h-[45px]"><img class="w-full h-auto object-cover" src="../../assets/images/avatar/12.jpg" alt="event"/></div>
+                        <div class="overflow-hidden rounded-full object-cover sm:min-w-[38px]"><img class="object-cover w-10 h-10 min-w-10" src="../../assets/images/avatar/12.jpg" alt="event"/></div>
                         <div class="flex-1"> <a href="chat-app.html">
-                            <h4 class="transition-all text-xs text-title font-semibold line-clamp-1 group-hover:text-primary">Dmitriy Groshev</h4></a><span class="text-2xs font-semibold text-content line-clamp-1 mt-[4px]">Cody fisher create task on ERP management system</span>
+                            <h4 class="transition-all text-xs font-semibold text-title line-clamp-1 group-hover:text-primary">Dmitriy Groshev</h4></a><span class="text-2xs font-semibold text-content line-clamp-1 mt-[4px]">Cody fisher create task on ERP management system</span>
                         </div>
                       </div><span class="min-w-fit badge text-3xs bg-gray-light text-title py-[7px] px-[13px]">2hr ago</span>
                     </li>
                     <li class="group flex items-center group justify-between gap-3 first:pt-0 last:pb-0 first:border-none py-[13px] border-t border-border-light"> 
                       <div class="flex items-center gap-[10px] flex-[1_1_0]">
-                        <div class="overflow-hidden rounded-full object-cover sm:min-w-[38px] sm:min-h-[38px] 5xl:min-w-[42px] 5xl:min-h-[42px] min-w-[45px] min-h-[45px]"><img class="w-full h-auto object-cover" src="../../assets/images/avatar/13.jpg" alt="event"/></div>
+                        <div class="overflow-hidden rounded-full object-cover sm:min-w-[38px]"><img class="object-cover w-10 h-10 min-w-10" src="../../assets/images/avatar/13.jpg" alt="event"/></div>
                         <div class="flex-1"> <a href="chat-app.html">
-                            <h4 class="transition-all text-xs text-title font-semibold line-clamp-1 group-hover:text-primary">Kristin watson</h4></a><span class="text-2xs font-semibold text-content line-clamp-1 mt-[4px]">Kristin watson payment gateway needed on sellmokam</span>
+                            <h4 class="transition-all text-xs font-semibold text-title line-clamp-1 group-hover:text-primary">Kristin watson</h4></a><span class="text-2xs font-semibold text-content line-clamp-1 mt-[4px]">Kristin watson payment gateway needed on sellmokam</span>
                         </div>
                       </div><span class="min-w-fit badge text-3xs bg-gray-light text-title py-[7px] px-[13px]">4hr ago</span>
                     </li>
                     <li class="group flex items-center group justify-between gap-3 first:pt-0 last:pb-0 first:border-none py-[13px] border-t border-border-light"> 
                       <div class="flex items-center gap-[10px] flex-[1_1_0]">
-                        <div class="overflow-hidden rounded-full object-cover sm:min-w-[38px] sm:min-h-[38px] 5xl:min-w-[42px] 5xl:min-h-[42px] min-w-[45px] min-h-[45px]"><img class="w-full h-auto object-cover" src="../../assets/images/avatar/14.jpg" alt="event"/></div>
+                        <div class="overflow-hidden rounded-full object-cover sm:min-w-[38px]"><img class="object-cover w-10 h-10 min-w-10" src="../../assets/images/avatar/14.jpg" alt="event"/></div>
                         <div class="flex-1"> <a href="chat-app.html">
-                            <h4 class="transition-all text-xs text-title font-semibold line-clamp-1 group-hover:text-primary">Janis Evans</h4></a><span class="text-2xs font-semibold text-content line-clamp-1 mt-[4px]">Jacob jones generate invoice on E-Commerce</span>
+                            <h4 class="transition-all text-xs font-semibold text-title line-clamp-1 group-hover:text-primary">Janis Evans</h4></a><span class="text-2xs font-semibold text-content line-clamp-1 mt-[4px]">Jacob jones generate invoice on E-Commerce</span>
                         </div>
                       </div><span class="min-w-fit badge text-3xs bg-gray-light text-title py-[7px] px-[13px]">10 Jun</span>
                     </li>
                     <li class="group flex items-center group justify-between gap-3 first:pt-0 last:pb-0 first:border-none py-[13px] border-t border-border-light"> 
                       <div class="flex items-center gap-[10px] flex-[1_1_0]">
-                        <div class="overflow-hidden rounded-full object-cover sm:min-w-[38px] sm:min-h-[38px] 5xl:min-w-[42px] 5xl:min-h-[42px] min-w-[45px] min-h-[45px]"><img class="w-full h-auto object-cover" src="../../assets/images/avatar/15.jpg" alt="event"/></div>
+                        <div class="overflow-hidden rounded-full object-cover sm:min-w-[38px]"><img class="object-cover w-10 h-10 min-w-10" src="../../assets/images/avatar/15.jpg" alt="event"/></div>
                         <div class="flex-1"> <a href="chat-app.html">
-                            <h4 class="transition-all text-xs text-title font-semibold line-clamp-1 group-hover:text-primary">Mukrani Pabelo</h4></a><span class="text-2xs font-semibold text-content line-clamp-1 mt-[4px]">Esther howard sent new logo on burger bro</span>
+                            <h4 class="transition-all text-xs font-semibold text-title line-clamp-1 group-hover:text-primary">Mukrani Pabelo</h4></a><span class="text-2xs font-semibold text-content line-clamp-1 mt-[4px]">Esther howard sent new logo on burger bro</span>
                         </div>
                       </div><span class="min-w-fit badge text-3xs bg-gray-light text-title py-[7px] px-[13px]">22 Jun</span>
                     </li>
                     <li class="group flex items-center group justify-between gap-3 first:pt-0 last:pb-0 first:border-none py-[13px] border-t border-border-light"> 
                       <div class="flex items-center gap-[10px] flex-[1_1_0]">
-                        <div class="overflow-hidden rounded-full object-cover sm:min-w-[38px] sm:min-h-[38px] 5xl:min-w-[42px] 5xl:min-h-[42px] min-w-[45px] min-h-[45px]"><img class="w-full h-auto object-cover" src="../../assets/images/avatar/16.jpg" alt="event"/></div>
+                        <div class="overflow-hidden rounded-full object-cover sm:min-w-[38px]"><img class="object-cover w-10 h-10 min-w-10" src="../../assets/images/avatar/16.jpg" alt="event"/></div>
                         <div class="flex-1"> <a href="chat-app.html">
-                            <h4 class="transition-all text-xs text-title font-semibold line-clamp-1 group-hover:text-primary">Josephin Water</h4></a><span class="text-2xs font-semibold text-content line-clamp-1 mt-[4px]">Esther howard comment on QHI Media Project</span>
+                            <h4 class="transition-all text-xs font-semibold text-title line-clamp-1 group-hover:text-primary">Josephin Water</h4></a><span class="text-2xs font-semibold text-content line-clamp-1 mt-[4px]">Esther howard comment on QHI Media Project</span>
                         </div>
                       </div><span class="min-w-fit badge text-3xs bg-gray-light text-title py-[7px] px-[13px]">10 July</span>
                     </li>
