--- a/html/template/invoice.html
+++ b/html/template/invoice.html
@@ -1005,10 +1005,10 @@
             <div class="col-span-12">
               <div class="card"> 
                 <div class="card-header pb-4">
-                  <div class="flex gap-2 justify-between items-center 3sm:flex-col"> 
+                  <div class="flex gap-2 justify-between items-center 3sm:flex-col 3sm:items-end"> 
                     <div class="flex item-center gap-2"> 
                       <div class="dropdown">
-                        <button class="btn border border-border-light flex gap-1 text-content items-center">Action
+                        <button class="btn border border-border-light flex gap-1 text-content items-center !p-[0.7rem]">Action
                           <svg class="w-[20px] h-[20px] stroke-content"> 
                             <use href="../../assets/svg/sprite.svg#Arrow-Down-2"> </use>
                           </svg>
@@ -1037,14 +1037,7 @@
                     <table class="table equal-space table-action invoice">
                       <thead> 
                         <tr>
-                          <th>
-                            <div class="flex items-center gap-2">
-                              <label class="checkbox cursor-pointer block w-4 h-4">
-                                <input class="peer" type="checkbox">
-                                <div class="checkbox-indicator peer-checked:!bg-primary !border-primary"> <i data-feather="check"></i></div>
-                              </label>Item Name
-                            </div>
-                          </th>
+                          <th>Item Name</th>
                           <th>User Name</th>
                           <th>Date</th>
                           <th>Status</th>
@@ -1570,7 +1563,7 @@
                   </div>
                 </div>
                 <div class="card-footer">
-                  <div class="flex justify-between items-center flex-wrap sm:flex-col">
+                  <div class="flex justify-between items-center flex-wrap sm:flex-col sm:items-end">
                     <div class="flex items-center">
                       <button class="btn border border-border-light rounded-none flex items-center gap-2 hover:bg-primary group hover:text-white"> 
                         <svg class="w-4 h-4 stroke-title group-hover:stroke-white"> 
