--- a/html/template/shop.html
+++ b/html/template/shop.html
@@ -1018,7 +1018,7 @@
             </div>
             <div class="col-span-12 flex items-center justify-between gap-3 bg-white p-3 rounded-5 2sm:flex-col"> 
               <div class="flex items-center gap-3">
-                <label class="min-w-max text-xs text-content3" for="sortby">Sort By                                    </label>
+                <label class="text-xs min-w-max text-content3" for="sortby">Sort By                                    </label>
                 <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px]" id="sortby" aria-label="Default select example">
                   <option selected="">All</option>
                   <option value="1">Popular</option>
@@ -1041,7 +1041,7 @@
                 <div class="card-header"> 
                   <div class="flex items-center justify-between w-full"> 
                     <h2 class="font-bold text-title">Filters</h2>
-                    <button class="p-1 rounded-full sm:p-1 shop-close-sidebar hidden xl:block"><i class="w-4 h-4" data-feather="x"></i></button>
+                    <button class="hidden p-1 rounded-full sm:p-1 shop-close-sidebar xl:block"><i class="w-4 h-4" data-feather="x"></i></button>
                   </div>
                 </div>
                 <div class="card-body flex flex-col gap-1">
@@ -1214,7 +1214,7 @@
                   </div>
                   <div class="flex flex-col">
                     <h4 class="bg-primary text-white text-sm p-3 w-full cursor-pointer rounded font-bold rounded-tr-[0.25rem] rounded-tl-[0.25rem] rounded-br-none rounded-bl-none">New Product</h4>
-                    <div class="block w-full p-3 mb-2 border-2 bg-white-light border-primary-light">
+                    <div class="block w-full p-3 border-2 bg-white-light border-primary-light">
                       <ul> 
                         <li class="group flex items-center group gap-[calc(7px_+_(15_-_7)_*_((100vw_-_320px)_/_(1920_-_320)))] first:pt-0 last:pb-0 first:border-none py-[13px] border-t border-light"> 
                           <div class="rounded-5 overflow-hidden min-w-14 min-h-auto 6xl:w-12"><img class="object-cover w-10 h-10 rounded-full" src="../../assets/images/product/5.jpg" alt="event"/></div>
@@ -2014,11 +2014,11 @@
                     <h3 class="leading-none font-semibold 3xl:flex 3xl:justify-between 3xl:items-center text-primary ">Casual Men's t-shirt</h3><i class="fa-solid fa-share w-4 h-4 text-content"></i>
                   </div>
                   <div class="flex gap-2 items-center"> 
-                    <label for="productmodal"> <i class="w-4 h-4 stroke-dark cursor-pointer" data-feather="x"></i></label>
+                    <label for="productmodal"> <i class="w-4 h-4 cursor-pointer stroke-dark" data-feather="x"></i></label>
                   </div>
                 </div><span class="text-content3 text-xs leading-none">#15704                  </span>
                 <p class="text-content3 text-xs leading-none">Currently in stock    </p>
-                <h4 class="font-semibold text-title lg:text-lg my-2">$500 
+                <h4 class="my-2 font-semibold text-title lg:text-lg">$500 
                   <del class="text-danger">$350 </del>
                 </h4>
                 <div class="flex items-center gap-2">
@@ -2031,12 +2031,12 @@
                   <div class="col-span-6 2lg:col-span-7 2sm:col-span-12">
                     <div class="flex items-center gap-3">
                       <label class="text-title text-sm font-medium" for="color">Color</label>
-                      <ul class="flex flex-wrap gap-1 items-center" id="color">
-                        <li class="w-5 h-5 bg-light rounded-full cursor-pointer"></li>
+                      <ul class="flex flex-wrap items-center gap-1" id="color">
+                        <li class="w-5 h-5 rounded-full cursor-pointer bg-light"></li>
                         <li class="w-5 h-5 bg-black rounded-full cursor-pointer"></li>
-                        <li class="w-5 h-5 bg-warning rounded-full cursor-pointer"></li>
-                        <li class="w-5 h-5 bg-danger rounded-full cursor-pointer"></li>
-                        <li class="w-5 h-5 bg-info rounded-full cursor-pointer"></li>
+                        <li class="w-5 h-5 rounded-full cursor-pointer bg-warning"></li>
+                        <li class="w-5 h-5 rounded-full cursor-pointer bg-danger"></li>
+                        <li class="w-5 h-5 rounded-full cursor-pointer bg-info"></li>
                       </ul>
                     </div>
                   </div>
