--- a/html/template/tabs.html
+++ b/html/template/tabs.html
@@ -1032,7 +1032,7 @@
                               <div class="flex flex-wrap items-center gap-4"> 
                                 <div class="flex items-center gap-2"> 
                                   <div class="avatar"> 
-                                    <div class="w-10 rounded-full xl:w-9"> <img src="../../assets/images/avatar/25.jpg" alt="avatar"></div>
+                                    <div class="w-10 h-10 rounded-full xl:w-9"> <img src="../../assets/images/avatar/25.jpg" alt="avatar"></div>
                                   </div>
                                   <div class="flex flex-col gap-1">
                                     <h3 class="text-xs font-bold leading-none lg:text-2xs">Angela R. Lear</h3><span class="text-content text-3xs">239-664-7751 </span>
@@ -1040,7 +1040,7 @@
                                 </div>
                                 <div class="flex items-center gap-2"> 
                                   <div class="avatar"> 
-                                    <div class="w-10 rounded-full xl:w-9"> <img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
+                                    <div class="w-10 h-10 rounded-full xl:w-9"> <img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
                                   </div>
                                   <div class="flex flex-col gap-1">
                                     <h3 class="text-xs font-bold leading-none lg:text-2xs"> Marjorie W. Martin</h3><span class="text-content text-3xs">440-494-0729</span>
@@ -1048,7 +1048,7 @@
                                 </div>
                                 <div class="flex items-center gap-2"> 
                                   <div class="avatar"> 
-                                    <div class="w-10 rounded-full xl:w-9"> <img src="../../assets/images/avatar/6.jpg" alt="avatar"></div>
+                                    <div class="w-10 h-10 rounded-full xl:w-9"> <img src="../../assets/images/avatar/6.jpg" alt="avatar"></div>
                                   </div>
                                   <div class="flex flex-col gap-1">
                                     <h3 class="text-xs font-bold leading-none lg:text-2xs">Russell P. Renfrew</h3><span class="text-content text-3xs">718-740-8438</span>
@@ -1056,7 +1056,7 @@
                                 </div>
                                 <div class="flex items-center gap-2"> 
                                   <div class="avatar"> 
-                                    <div class="w-10 rounded-full xl:w-9"> <img src="../../assets/images/avatar/27.jpg" alt="avatar"></div>
+                                    <div class="w-10 h-10 rounded-full xl:w-9"> <img src="../../assets/images/avatar/27.jpg" alt="avatar"></div>
                                   </div>
                                   <div class="flex flex-col gap-1">
                                     <h3 class="text-xs font-bold leading-none lg:text-2xs">Kevin A. Ek</h3><span class="text-content text-3xs">218-793-6609</span>
@@ -1064,7 +1064,7 @@
                                 </div>
                                 <div class="flex items-center gap-2"> 
                                   <div class="avatar"> 
-                                    <div class="w-10 rounded-full xl:w-9"> <img src="../../assets/images/avatar/26.jpg" alt="avatar"></div>
+                                    <div class="w-10 h-10 rounded-full xl:w-9"> <img src="../../assets/images/avatar/26.jpg" alt="avatar"></div>
                                   </div>
                                   <div class="flex flex-col gap-1">
                                     <h3 class="text-xs font-bold leading-none lg:text-2xs">Carolyn A. Sutton</h3><span class="text-content text-3xs">314-445-1451</span>
@@ -1076,7 +1076,7 @@
                               <div class="flex flex-wrap items-center gap-4"> 
                                 <div class="flex items-center gap-2"> 
                                   <div class="avatar"> 
-                                    <div class="w-10 rounded-full xl:w-9"> <img src="../../assets/images/avatar/31.jpg" alt="avatar"></div>
+                                    <div class="w-10 h-10 rounded-full xl:w-9"> <img src="../../assets/images/avatar/31.jpg" alt="avatar"></div>
                                   </div>
                                   <div class="flex flex-col gap-1">
                                     <h3 class="text-xs font-bold leading-none lg:text-2xs">Emily T. Hooper</h3><span class="text-content text-3xs">258-664-7751 </span>
@@ -1084,7 +1084,7 @@
                                 </div>
                                 <div class="flex items-center gap-2"> 
                                   <div class="avatar"> 
-                                    <div class="w-10 rounded-full xl:w-9"> <img src="../../assets/images/avatar/34.jpg" alt="avatar"></div>
+                                    <div class="w-10 h-10 rounded-full xl:w-9"> <img src="../../assets/images/avatar/34.jpg" alt="avatar"></div>
                                   </div>
                                   <div class="flex flex-col gap-1">
                                     <h3 class="text-xs font-bold leading-none lg:text-2xs"> Ann J. Strickland</h3><span class="text-content text-3xs">440-851-0729</span>
@@ -1092,7 +1092,7 @@
                                 </div>
                                 <div class="flex items-center gap-2"> 
                                   <div class="avatar"> 
-                                    <div class="w-10 rounded-full xl:w-9"> <img src="../../assets/images/avatar/22.jpg" alt="avatar"></div>
+                                    <div class="w-10 h-10 rounded-full xl:w-9"> <img src="../../assets/images/avatar/22.jpg" alt="avatar"></div>
                                   </div>
                                   <div class="flex flex-col gap-1">
                                     <h3 class="text-xs font-bold leading-none lg:text-2xs">Natasha W. Watson</h3><span class="text-content text-3xs">698-740-8438</span>
@@ -1100,7 +1100,7 @@
                                 </div>
                                 <div class="flex items-center gap-2"> 
                                   <div class="avatar"> 
-                                    <div class="w-10 rounded-full xl:w-9"> <img src="../../assets/images/avatar/13.jpg" alt="avatar"></div>
+                                    <div class="w-10 h-10 rounded-full xl:w-9"> <img src="../../assets/images/avatar/13.jpg" alt="avatar"></div>
                                   </div>
                                   <div class="flex flex-col gap-1">
                                     <h3 class="text-xs font-bold leading-none lg:text-2xs">Thomas A. Leroy</h3><span class="text-content text-3xs">218-793-7845</span>
@@ -1108,7 +1108,7 @@
                                 </div>
                                 <div class="flex items-center gap-2"> 
                                   <div class="avatar"> 
-                                    <div class="w-10 rounded-full xl:w-9"> <img src="../../assets/images/avatar/8.jpg" alt="avatar"></div>
+                                    <div class="w-10 h-10 rounded-full xl:w-9"> <img src="../../assets/images/avatar/8.jpg" alt="avatar"></div>
                                   </div>
                                   <div class="flex flex-col gap-1">
                                     <h3 class="text-xs font-bold leading-none lg:text-2xs">Mark S. Ward</h3><span class="text-content text-3xs">314-4874-1451</span>
@@ -1133,7 +1133,7 @@
               &lt;div class="flex flex-wrap gap-4"&gt;
                   &lt;div class="flex flex-wrap gap-2"&gt;
                       &lt;div class="avatar"&gt;
-                          &lt;div class="w-10 rounded-full xl:w-9"&gt;
+                          &lt;div class="w-10 h-10 rounded-full xl:w-9"&gt;
                               &lt;img src="../../image.jpg" alt="avatar"/&gt;
                           &lt;/div&gt;
                       &lt;/div&gt;
@@ -1148,7 +1148,7 @@
               &lt;div class="flex flex-wrap gap-4"&gt;
                   &lt;div class="flex flex-wrap gap-2"&gt;
                       &lt;div class="avatar"&gt;
-                          &lt;div class="w-10 rounded-full xl:w-9"&gt;
+                          &lt;div class="w-10 h-10 rounded-full xl:w-9"&gt;
                               &lt;img src="../../image.jpg" alt="avatar"/&gt;
                           &lt;/div&gt;
                       &lt;/div&gt;
@@ -1448,7 +1448,7 @@
                                 <div class="flex justify-between gap-2 pb-2 border-b border-border-light sm:gap-1 sm:flex-col"> 
                                   <div class="flex items-center gap-2"> 
                                     <div class="avatar"> 
-                                      <div class="w-10 rounded-full xl:w-9"> <img src="../../assets/images/avatar/8.jpg" alt="avatar"></div>
+                                      <div class="w-10 rounded-full h-10 xl:w-9 xl:h-9"> <img src="../../assets/images/avatar/8.jpg" alt="avatar"></div>
                                     </div>
                                     <div class="flex flex-col gap-1">
                                       <h3 class="text-xs font-bold leading-none lg:text-2xs">Robot Caslin</h3><span class="text-content text-2xs">stroman.rogers@gmail.com</span>
@@ -1504,7 +1504,7 @@
                   &lt;div class="flex justify-between gap-2 pb-2 border-b border-border-light"&gt; 
                       &lt;div class="flex items-center gap-2"&gt; 
                           &lt;div class="avatar"&gt;
-                              &lt;div class="w-10 rounded-full xl:w-9"&gt;
+                              &lt;div class="w-10 h-10 rounded-full xl:h-9 xl:w-9"&gt;
                                   &lt;img src="../../image.jpg" alt="avatar"/&gt;
                               &lt;/div&gt;
                           &lt;/div&gt;
